--- a/directbak.yaml
+++ b/directbak.yaml
@@ -108,6 +108,7 @@ payload:
   - '+.01w.com'
   - '+.01water.com'
   - '+.01wb.com'
+  - '+.01xs.com'
   - '+.01yo.com'
   - '+.01youyuan.com'
   - '+.01yun.com'
@@ -642,6 +643,7 @@ payload:
   - '+.0hgame.com'
   - '+.0ju.cc'
   - '+.0kee.com'
+  - '+.0qda82zu.com'
   - '+.0rl.cc'
   - '+.0s8s.com'
   - '+.0sm.com'
@@ -816,7 +818,6 @@ payload:
   - '+.10419.net'
   - '+.105a.com'
   - '+.105mr.com'
-  - '+.105zx.com'
   - '+.106.com'
   - '+.10639888.com'
   - '+.1065m.com'
@@ -2576,6 +2577,7 @@ payload:
   - '+.31xj.com'
   - '+.31xs.com'
   - '+.31xs.net'
+  - '+.31xs.org'
   - '+.31yarn.com'
   - '+.31yj.com'
   - '+.31zscl.com'
@@ -4464,6 +4466,7 @@ payload:
   - '+.52xitong.com'
   - '+.52xiuxian.com'
   - '+.52xiyou.com'
+  - '+.52xp.net'
   - '+.52xyz.com'
   - '+.52yawa.com'
   - '+.52yesu.com'
@@ -5912,8 +5915,6 @@ payload:
   - '+.80xs.la'
   - '+.80ym.com'
   - '+.80zhan.com'
-  - '+.810236.com'
-  - '+.810251.com'
   - '+.8104510.com'
   - '+.8108188.com'
   - '+.810840.com'
@@ -6037,7 +6038,6 @@ payload:
   - '+.866ds.com'
   - '+.8673h.com'
   - '+.867game.com'
-  - '+.8681.org'
   - '+.8682.cc'
   - '+.8684.com'
   - '+.868578.com'
@@ -7504,7 +7504,6 @@ payload:
   - '+.aerfaying.com'
   - '+.aerochina.net'
   - '+.aesdrink.com'
-  - '+.aesml.com'
   - '+.aesucai.com'
   - '+.aet21.com'
   - '+.aevit.xyz'
@@ -7575,7 +7574,6 @@ payload:
   - '+.ah9yu.com'
   - '+.ahacpp.com'
   - '+.ahadl.org'
-  - '+.ahafm.com'
   - '+.ahalei.com'
   - '+.ahanxun.com'
   - '+.ahao.moe'
@@ -7591,6 +7589,7 @@ payload:
   - '+.ahchuangyebang.com'
   - '+.ahcjhjj.com'
   - '+.ahcnb.com'
+  - '+.ahdf56.com'
   - '+.ahdltj.com'
   - '+.ahdsez.com'
   - '+.ahdzfp.com'
@@ -7628,7 +7627,6 @@ payload:
   - '+.ahlsm1.com'
   - '+.ahmayun.com'
   - '+.ahmky.com'
-  - '+.ahmup.com'
   - '+.ahnanfang.com'
   - '+.ahnews.org'
   - '+.ahougn.com'
@@ -8331,6 +8329,7 @@ payload:
   - '+.allyes.com'
   - '+.allyes.net'
   - '+.allystar.com'
+  - '+.alo7.com'
   - '+.aloha-ukulele.com'
   - '+.alonemonkey.com'
   - '+.alongsky.com'
@@ -8388,7 +8387,6 @@ payload:
   - '+.amh.sh'
   - '+.amhimalayanet.com'
   - '+.amhl.net'
-  - '+.amhnn.com'
   - '+.amicool.net'
   - '+.amif-expo.com'
   - '+.amijiaoyu.com'
@@ -9459,7 +9457,6 @@ payload:
   - '+.b7l.cc'
   - '+.b8yx.com'
   - '+.ba-li.com'
-  - '+.ba210.com'
   - '+.baalchina.net'
   - '+.baba.cc'
   - '+.bababian.com'
@@ -10887,7 +10884,6 @@ payload:
   - '+.bitjia.com'
   - '+.bitky.cc'
   - '+.bitmain.vip'
-  - '+.bitmap.cc'
   - '+.bitmap3d.com'
   - '+.bitmingw.com'
   - '+.bitol.net'
@@ -11763,7 +11759,6 @@ payload:
   - '+.btglotto.com'
   - '+.bthhotels.com'
   - '+.bthlt.com'
-  - '+.bthss.com'
   - '+.bthuifu.com'
   - '+.btime.com'
   - '+.btmao.cc'
@@ -12176,6 +12171,7 @@ payload:
   - '+.cabplink.com'
   - '+.cacfo.com'
   - '+.cacg.cc'
+  - '+.cachedataby.com'
   - '+.cachekit.com'
   - '+.cackui.com'
   - '+.cacpp.com'
@@ -16631,6 +16627,7 @@ payload:
   - '+.csyestar.com'
   - '+.csyfe.com'
   - '+.csytv.com'
+  - '+.csyuyism.com'
   - '+.cszb556.com'
   - '+.cszexin.com'
   - '+.cszit.com'
@@ -16913,7 +16910,6 @@ payload:
   - '+.cyegushi.com'
   - '+.cyfeng.com'
   - '+.cyfengchao.com'
-  - '+.cyhd.net'
   - '+.cyhm.com'
   - '+.cyhone.com'
   - '+.cyht168.com'
@@ -19162,6 +19158,7 @@ payload:
   - '+.drupalla.com'
   - '+.drupalproject.org'
   - '+.drv.tw'
+  - '+.drvi.net'
   - '+.drvsky.com'
   - '+.drwfggc.com'
   - '+.ds-360.com'
@@ -20506,7 +20503,6 @@ payload:
   - '+.enmajor.com'
   - '+.enmonster.com'
   - '+.enmotech.com'
-  - '+.enmsb.com'
   - '+.enmuo.com'
   - '+.ennresearch.com'
   - '+.ennweekly.com'
@@ -21805,7 +21801,6 @@ payload:
   - '+.fhoverseas.com'
   - '+.fhrl2018.com'
   - '+.fhrlw.com'
-  - '+.fhsas.com'
   - '+.fhtj.com'
   - '+.fhtlw.com'
   - '+.fhtre.com'
@@ -22589,7 +22584,6 @@ payload:
   - '+.fuz.cc'
   - '+.fuzadu.com'
   - '+.fuzamei.com'
-  - '+.fuzangtang.com'
   - '+.fuzeetech.com'
   - '+.fuzegame.com'
   - '+.fuzhimao.com'
@@ -22844,6 +22838,7 @@ payload:
   - '+.gamecps.com'
   - '+.gamed9.com'
   - '+.gamedashi.com'
+  - '+.gamedo.org'
   - '+.gameegg.com'
   - '+.gameexp.com'
   - '+.gamefk.com'
@@ -23162,7 +23157,6 @@ payload:
   - '+.gdmm.com'
   - '+.gdmoa.org'
   - '+.gdmschina.com'
-  - '+.gdmseduol.com'
   - '+.gdmuseum.com'
   - '+.gdmxjy.com'
   - '+.gdong.com'
@@ -23282,6 +23276,7 @@ payload:
   - '+.geermunews.com'
   - '+.geeseteam.com'
   - '+.geetest.com'
+  - '+.geevisit.com'
   - '+.geewaza.com'
   - '+.geexek.com'
   - '+.geeyep.com'
@@ -23566,7 +23561,6 @@ payload:
   - '+.gjalk.com'
   - '+.gjb9001b.com'
   - '+.gjbaek.ren'
-  - '+.gjcdn.vip'
   - '+.gjceshi9.com'
   - '+.gjds.vip'
   - '+.gjdwzp.com'
@@ -24037,7 +24031,6 @@ payload:
   - '+.gouwuyu.com'
   - '+.gouyoukeji.com'
   - '+.govfz.com'
-  - '+.govhebie.com'
   - '+.govmade.com'
   - '+.gow100.com'
   - '+.gowa.club'
@@ -25685,6 +25678,7 @@ payload:
   - '+.hbctjk.com'
   - '+.hbcwt.com'
   - '+.hbcyclub.com'
+  - '+.hbcydlqc.com'
   - '+.hbdangyang.com'
   - '+.hbddrn.com'
   - '+.hbdfdh.com'
@@ -25730,6 +25724,7 @@ payload:
   - '+.hbidc.net'
   - '+.hbifeng.com'
   - '+.hbinitiate.com'
+  - '+.hbisv.com'
   - '+.hbjcgy.com'
   - '+.hbjdxt.com'
   - '+.hbjhc.com'
@@ -26224,6 +26219,7 @@ payload:
   - '+.hepalink.com'
   - '+.hepan.com'
   - '+.hepan.org'
+  - '+.hepatox.org'
   - '+.hepawang.com'
   - '+.hepmall.com'
   - '+.hepost.com'
@@ -27758,6 +27754,7 @@ payload:
   - '+.huayiming.com'
   - '+.huayinjapan.com'
   - '+.huayiwork.com'
+  - '+.huayou.com'
   - '+.huayoumengze.com'
   - '+.huayoutianyu.com'
   - '+.huayuanlaobao.com'
@@ -28138,6 +28135,7 @@ payload:
   - '+.hushangcaifu.com'
   - '+.hust-laser.com'
   - '+.hust-snde.com'
+  - '+.hust-wuxi.com'
   - '+.hust.cc'
   - '+.hust.cx'
   - '+.hust.online'
@@ -28145,6 +28143,7 @@ payload:
   - '+.hustduyan.com'
   - '+.hustlife.com'
   - '+.hustlzp.com'
+  - '+.hustmei.com'
   - '+.hustnews.com'
   - '+.hustoj.com'
   - '+.hustonline.net'
@@ -31137,6 +31136,7 @@ payload:
   - '+.jianfeibaike.com'
   - '+.jianfeidaren.com'
   - '+.jianfengstudio.com'
+  - '+.jiangbeijituan.com'
   - '+.jiangbeishuicheng.com'
   - '+.jiangchaochina.com'
   - '+.jiangcp.com'
@@ -31260,6 +31260,7 @@ payload:
   - '+.jiaoran.net'
   - '+.jiaoshouhuayuan.com'
   - '+.jiaoshouwang.com'
+  - '+.jiaotongshigu.org'
   - '+.jiaotou.org'
   - '+.jiaoyimao.com'
   - '+.jiaoyin.com'
@@ -34445,7 +34446,6 @@ payload:
   - '+.kvhnn.com'
   - '+.kviso.com'
   - '+.kvkaa.com'
-  - '+.kvkft.com'
   - '+.kvmaa.com'
   - '+.kvogues.com'
   - '+.kvov.com'
@@ -34831,7 +34831,6 @@ payload:
   - '+.laohu.com'
   - '+.laohu8.com'
   - '+.laohuabao.com'
-  - '+.laohuangli.net'
   - '+.laohucaijing.com'
   - '+.laohutao.com'
   - '+.laohuyun.com'
@@ -36508,7 +36507,6 @@ payload:
   - '+.lopopoo.com'
   - '+.lopss.com'
   - '+.lorefree.com'
-  - '+.losala.com'
   - '+.losking.com'
   - '+.lossyou.com'
   - '+.lostali.com'
@@ -40374,6 +40372,7 @@ payload:
   - '+.nihaowang.com'
   - '+.nihuwo.net'
   - '+.niiceda.com'
+  - '+.niiddm.com'
   - '+.niiwoo.com'
   - '+.nikanpian.com'
   - '+.nikebiji.com'
@@ -44883,14 +44882,12 @@ payload:
   - '+.razrlele.com'
   - '+.raztb.com'
   - '+.rb400.com'
-  - '+.rbcty.com'
   - '+.rbischina.org'
   - '+.rbqq.com'
   - '+.rbz1672.com'
   - '+.rbzygs.com'
   - '+.rc114.com'
   - '+.rc3cr.com'
-  - '+.rc53.com'
   - '+.rccchina.com'
   - '+.rcdang.com'
   - '+.rcdn.fun'
@@ -44959,7 +44956,6 @@ payload:
   - '+.ready4go.com'
   - '+.reaer.com'
   - '+.reai120.com'
-  - '+.reaicomic.com'
   - '+.realdatamed.com'
   - '+.realforcechina.com'
   - '+.reallct.com'
@@ -45876,7 +45872,6 @@ payload:
   - '+.sandwych.com'
   - '+.sandy2.com'
   - '+.sanen.online'
-  - '+.sanfen.me'
   - '+.sanfen666.com'
   - '+.sanfengyun.com'
   - '+.sanfo.com'
@@ -46779,6 +46774,7 @@ payload:
   - '+.shanghaishuangyanpi.com'
   - '+.shanghaitianqi114.com'
   - '+.shanghaitower.com'
+  - '+.shanghaiwater.com'
   - '+.shanghaixs.com'
   - '+.shanghaizaojia.com'
   - '+.shanghaizhenji.com'
@@ -47319,6 +47315,7 @@ payload:
   - '+.shjyou.com'
   - '+.shjyyx.com'
   - '+.shkegai.net'
+  - '+.shkingchem.com'
   - '+.shkkl.com'
   - '+.shkuangjing.com'
   - '+.shkypump.com'
@@ -48133,7 +48130,6 @@ payload:
   - '+.sjhgo.com'
   - '+.sjhl.cc'
   - '+.sjhy.net'
-  - '+.sjifm.com'
   - '+.sjjob88.com'
   - '+.sjkhsl.fun'
   - '+.sjlqgg.com'
@@ -48528,7 +48524,6 @@ payload:
   - '+.soboten.com'
   - '+.sobug.com'
   - '+.socang.com'
-  - '+.socansoft.com'
   - '+.socay.com'
   - '+.soccerbar.cc'
   - '+.socchina.net'
@@ -50013,6 +50008,7 @@ payload:
   - '+.szjcyyy.com'
   - '+.szjhxjt.com'
   - '+.szjlwul.com'
+  - '+.szjunfei.com'
   - '+.szjuquan.com'
   - '+.szjyt66.com'
   - '+.szjytx.com'
@@ -51645,6 +51641,7 @@ payload:
   - '+.tongxinky.com'
   - '+.tongxinmao.com'
   - '+.tongxinteng.com'
+  - '+.tongxinyiyaocs.com'
   - '+.tongxiong.com'
   - '+.tongxue.com'
   - '+.tongxue365.com'
@@ -53753,7 +53750,6 @@ payload:
   - '+.vipxdns.info'
   - '+.vipxdns.net'
   - '+.vipxs.la'
-  - '+.vipxsh.com'
   - '+.vipyaya.com'
   - '+.vipyl.com'
   - '+.vipyooni.com'
@@ -54527,6 +54523,7 @@ payload:
   - '+.wayhu8.com'
   - '+.wayingyong.com'
   - '+.waynetechs.com'
+  - '+.wayos.com'
   - '+.wayoulegal.com'
   - '+.wayoutv.com'
   - '+.wayoxi.com'
@@ -54605,7 +54602,6 @@ payload:
   - '+.wdy44.com'
   - '+.wdyxgames.com'
   - '+.wdzj.com'
-  - '+.wdzj.org'
   - '+.wdzjimages.com'
   - '+.wdzx.com'
   - '+.we.com'
@@ -55237,7 +55233,6 @@ payload:
   - '+.wflgjx.com'
   - '+.wfsdf.com'
   - '+.wfsysc.com'
-  - '+.wfun.com'
   - '+.wfuyu.com'
   - '+.wfxspc.com'
   - '+.wfzbjx.com'
@@ -55339,7 +55334,6 @@ payload:
   - '+.whetc.com'
   - '+.whevt.com'
   - '+.whewash.com'
-  - '+.whfangchanzx.com'
   - '+.whfazun.com'
   - '+.whfcsc.org'
   - '+.whfeiyou.com'
@@ -56194,6 +56188,7 @@ payload:
   - '+.woying.com'
   - '+.woyoo.com'
   - '+.woyouche.com'
+  - '+.woyoujk.com'
   - '+.woyouquan.net'
   - '+.wozaijia.com'
   - '+.wozhangwan.com'
@@ -56809,7 +56804,6 @@ payload:
   - '+.wzime.com'
   - '+.wzits.com'
   - '+.wzj9.com'
-  - '+.wzjmr.com'
   - '+.wzjxyq.com'
   - '+.wzksw.com'
   - '+.wzlscf.com'
@@ -58644,7 +58638,6 @@ payload:
   - '+.xncoding.com'
   - '+.xncredit.com'
   - '+.xndm.tech'
-  - '+.xnguke.com'
   - '+.xnh123.com'
   - '+.xnhdgame.com'
   - '+.xninja.org'
@@ -59181,7 +59174,6 @@ payload:
   - '+.xxmh223.com'
   - '+.xxmh225.com'
   - '+.xxmh226.com'
-  - '+.xxmh330.com'
   - '+.xxmh460.com'
   - '+.xxnets.net'
   - '+.xxnmcd.com'
@@ -59599,7 +59591,6 @@ payload:
   - '+.yaoman.net'
   - '+.yaomuzhubao.com'
   - '+.yaonano.com'
-  - '+.yaoor.com'
   - '+.yaooxx.space'
   - '+.yaopaiming.com'
   - '+.yaopinnet.com'
@@ -60467,7 +60458,6 @@ payload:
   - '+.yisusoft.com'
   - '+.yit.com'
   - '+.yitaifang.com'
-  - '+.yitang.org'
   - '+.yitanyun.com'
   - '+.yitaojiayuan.com'
   - '+.yitel.com'
@@ -61313,6 +61303,7 @@ payload:
   - '+.yqxhl.com'
   - '+.yqxiuyoung.com'
   - '+.yqxs.cc'
+  - '+.yqxsge.cc'
   - '+.yqyanhong.com'
   - '+.yqzww.cc'
   - '+.yqzww.la'
@@ -61373,7 +61364,6 @@ payload:
   - '+.ysoow.com'
   - '+.ysplay.com'
   - '+.ysrh.com'
-  - '+.yssm.org'
   - '+.yssp88.com'
   - '+.ysstech.com'
   - '+.ysszzs.com'
@@ -62016,7 +62006,6 @@ payload:
   - '+.yuzi.net'
   - '+.yuzunzhi.com'
   - '+.yuzvf.com'
-  - '+.yuzzl.com'
   - '+.yveqi.com'
   - '+.yvv.in'
   - '+.yw11.com'
@@ -63939,6 +63928,7 @@ payload:
   - '+.ziyuanm.com'
   - '+.ziyuanmaow.com'
   - '+.ziyuantun.com'
+  - '+.ziyuen.com'
   - '+.ziyuewentao.com'
   - '+.ziyun.com'
   - '+.zizaike.com'
