--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1702,7 +1702,6 @@ payload:
   - '+.1900.live'
   - '+.1903it.com'
   - '+.1905.com'
-  - '+.190757.com'
   - '+.19196.com'
   - '+.1919game.net'
   - '+.192ly.com'
@@ -2010,7 +2009,6 @@ payload:
   - '+.21cp.cc'
   - '+.21cp.com'
   - '+.21ctest.com'
-  - '+.21dagong.com'
   - '+.21datasheet.com'
   - '+.21dianyuan.com'
   - '+.21edu8.com'
@@ -2538,7 +2536,6 @@ payload:
   - '+.317hu.com'
   - '+.3188.la'
   - '+.318ek.com'
-  - '+.31966.net'
   - '+.3198.com'
   - '+.319n.com'
   - '+.31alu.com'
@@ -4510,6 +4507,7 @@ payload:
   - '+.53666.org'
   - '+.5367.com'
   - '+.537.com'
+  - '+.537882736.com'
   - '+.5379yx.com'
   - '+.537a.com'
   - '+.538618.com'
@@ -5761,6 +5759,7 @@ payload:
   - '+.7jjjj.com'
   - '+.7jk.com'
   - '+.7jubao.com'
+  - '+.7juju.com'
   - '+.7junshi.com'
   - '+.7k35.com'
   - '+.7k7k.com'
@@ -6600,6 +6599,7 @@ payload:
   - '+.934dsw.com'
   - '+.9355.com'
   - '+.93636.com'
+  - '+.93665.xin'
   - '+.936u.com'
   - '+.9377.com'
   - '+.9377a.com'
@@ -7704,6 +7704,8 @@ payload:
   - '+.aicsnet.com'
   - '+.aicu8.com'
   - '+.aicunfu.com'
+  - '+.aida64.cc'
+  - '+.aida64cn.com'
   - '+.aidafen.com'
   - '+.aidai.com'
   - '+.aidaily.com'
@@ -8053,7 +8055,6 @@ payload:
   - '+.akniu.com'
   - '+.aknzb.com'
   - '+.akomr.com'
-  - '+.akoofs.com'
   - '+.akppt.net'
   - '+.akr-developers.com'
   - '+.akscan.com'
@@ -9293,7 +9294,6 @@ payload:
   - '+.av2.me'
   - '+.av269.com'
   - '+.av380.net'
-  - '+.avacvisa.com'
   - '+.avalon.pw'
   - '+.avalon233.com'
   - '+.avanpa.com'
@@ -15014,7 +15014,6 @@ payload:
   - '+.cloopen.net'
   - '+.cloopm.com'
   - '+.closertb.site'
-  - '+.clostone.com'
   - '+.clotfun.online'
   - '+.clotfun.xyz'
   - '+.clotheshr.com'
@@ -16944,7 +16943,6 @@ payload:
   - '+.cyts.com'
   - '+.cytsls.com'
   - '+.cytstibet.com'
-  - '+.cyttc.org'
   - '+.cyudun.net'
   - '+.cyuew.com'
   - '+.cyuyan100.com'
@@ -17819,7 +17817,6 @@ payload:
   - '+.dektw.com'
   - '+.delanauto.com'
   - '+.deli-tools.com'
-  - '+.deli-tuma.com'
   - '+.delib2b.com'
   - '+.delibao.com'
   - '+.delicloud.com'
@@ -17962,6 +17959,7 @@ payload:
   - '+.dfham.com'
   - '+.dfhon.com'
   - '+.dfhtjn.com'
+  - '+.dfkan.com'
   - '+.dfkcgs.com'
   - '+.dfkhgj.com'
   - '+.dfkj.cc'
@@ -19308,7 +19306,6 @@ payload:
   - '+.dun-mfy-cdn.com'
   - '+.dunjiaodu.com'
   - '+.dunkhome.com'
-  - '+.dunlve.com'
   - '+.dunwang.com'
   - '+.duobaoqibin.com'
   - '+.duobei.com'
@@ -20134,6 +20131,7 @@ payload:
   - '+.eecnt.com'
   - '+.eecourse.com'
   - '+.eecso.com'
+  - '+.eedevice.com'
   - '+.eedns.com'
   - '+.eee-eee.com'
   - '+.eee4.com'
@@ -22886,6 +22884,7 @@ payload:
   - '+.gamutsoft.com'
   - '+.gamux.org'
   - '+.gan-ren.com'
+  - '+.ganduee.com'
   - '+.ganggg.com'
   - '+.ganghaowang.com'
   - '+.ganglonggou.com'
@@ -23629,7 +23628,6 @@ payload:
   - '+.glgoo.net'
   - '+.glgoo.org'
   - '+.glhospital.com'
-  - '+.glike.me'
   - '+.glinfo.com'
   - '+.gljrkj.com'
   - '+.gllue.com'
@@ -25602,6 +25600,7 @@ payload:
   - '+.hardkr.com'
   - '+.hardspell.com'
   - '+.hareric.com'
+  - '+.hariogame.com'
   - '+.harlanc.vip'
   - '+.harmay.com'
   - '+.harmight.com'
@@ -27221,6 +27220,7 @@ payload:
   - '+.hpccake.com'
   - '+.hpcscncrt.com'
   - '+.hpdwfd2.com'
+  - '+.hpicss.com'
   - '+.hpoi.net'
   - '+.hpool.online'
   - '+.hprt.com'
@@ -27733,6 +27733,7 @@ payload:
   - '+.huaxiaci.com'
   - '+.huaxiaf.com'
   - '+.huaxiangdiao.com'
+  - '+.huaxianpai.com'
   - '+.huaxiao5.com'
   - '+.huaxiaobaokeji.com'
   - '+.huaxiazi.com'
@@ -27745,6 +27746,7 @@ payload:
   - '+.huaxj.net'
   - '+.huaxuezoo.com'
   - '+.huayala.com'
+  - '+.huayanchayu.com'
   - '+.huayanghui.net'
   - '+.huayanxiu.com'
   - '+.huayanxiu.net'
@@ -29408,7 +29410,7 @@ payload:
   - '+.ilaisa.com'
   - '+.ilaitui.com'
   - '+.ilancai.com'
-  - '+.ilanluo.com'
+  - '+.ilanni.com'
   - '+.ilanx0.net'
   - '+.ilanzou.com'
   - '+.ilaw66.com'
@@ -29814,6 +29816,7 @@ payload:
   - '+.inspurpower.com'
   - '+.insta360.com'
   - '+.instafogging.com'
+  - '+.installgreat.com'
   - '+.insun-china.com'
   - '+.insuns.com'
   - '+.inswindow.com'
@@ -30076,7 +30079,6 @@ payload:
   - '+.irongbei.com'
   - '+.ironghui.com'
   - '+.irootech.com'
-  - '+.irpmgcmd.com'
   - '+.irs01.com'
   - '+.irs01.net'
   - '+.irs03.com'
@@ -33401,7 +33403,6 @@ payload:
   - '+.kcwiki.org'
   - '+.kcyuri.com'
   - '+.kczhaosheng.com'
-  - '+.kd028.com'
   - '+.kd120.com'
   - '+.kd128.com'
   - '+.kd185.com'
@@ -34413,7 +34414,6 @@ payload:
   - '+.kuwan8.com'
   - '+.kuwanapp.com'
   - '+.kuwanbang.com'
-  - '+.kuweimi.com'
   - '+.kuwen.net'
   - '+.kuwew.com'
   - '+.kuwuu.com'
@@ -34539,6 +34539,7 @@ payload:
   - '+.kyy6.com'
   - '+.kyyj.net'
   - '+.kyzf.net'
+  - '+.kyzx.xyz'
   - '+.kyzyj.com'
   - '+.kz8yx.com'
   - '+.kza.cc'
@@ -35955,7 +35956,6 @@ payload:
   - '+.lisp123.com'
   - '+.listarypro.com'
   - '+.listeneer.com'
-  - '+.listenerri.com'
   - '+.listentide.com'
   - '+.listentoworld.com'
   - '+.listenvod.com'
@@ -36345,6 +36345,7 @@ payload:
   - '+.lohaa.com'
   - '+.lohalink.com'
   - '+.lohaslady.com'
+  - '+.lohasor.com'
   - '+.loho88.com'
   - '+.loj.ac'
   - '+.loji.com'
@@ -37754,7 +37755,6 @@ payload:
   - '+.mcmssc.com'
   - '+.mcooks.com'
   - '+.mcool.com'
-  - '+.mcoy.cloud'
   - '+.mcpemaster.com'
   - '+.mcpmaid.com'
   - '+.mcqyy.com'
@@ -38515,6 +38515,7 @@ payload:
   - '+.mingdao8.com'
   - '+.mingdaocloud.com'
   - '+.mingdongman.com'
+  - '+.mingfengtang.com'
   - '+.mingin.com'
   - '+.mingjian.com'
   - '+.mingjinglu.com'
@@ -40425,6 +40426,7 @@ payload:
   - '+.niu-ba.com'
   - '+.niu.com'
   - '+.niua.com'
+  - '+.niuaa1688.com'
   - '+.niuacc.com'
   - '+.niuap.com'
   - '+.niubb.net'
@@ -40920,6 +40922,7 @@ payload:
   - '+.nyrsksw.com'
   - '+.nyshszh.com'
   - '+.nysmfc.com'
+  - '+.nyxr-home.com'
   - '+.nyyzjg.com'
   - '+.nz86.com'
   - '+.nz998.com'
@@ -41732,7 +41735,6 @@ payload:
   - '+.pahou.com'
   - '+.pahx.com'
   - '+.pahys.com'
-  - '+.pai-hang-bang.com'
   - '+.paibanxia.com'
   - '+.paichen.net'
   - '+.paidai.org'
@@ -43320,6 +43322,7 @@ payload:
   - '+.qdjxhz.com'
   - '+.qdkebang.com'
   - '+.qdkingst.com'
+  - '+.qdkmjc.com'
   - '+.qdkongtiao.com'
   - '+.qdlanrun.com'
   - '+.qdliye.com'
@@ -43821,7 +43824,6 @@ payload:
   - '+.qingpinji.com'
   - '+.qingqikeji.com'
   - '+.qingqin.com'
-  - '+.qingquwu.net'
   - '+.qingrenw.com'
   - '+.qingruanit.net'
   - '+.qingshow.net'
@@ -44272,7 +44274,6 @@ payload:
   - '+.qqwechat.com'
   - '+.qqwmly.com'
   - '+.qqwmx.com'
-  - '+.qqwtb.com'
   - '+.qqwwr.com'
   - '+.qqwxmail.com'
   - '+.qqwys.net'
@@ -44819,7 +44820,6 @@ payload:
   - '+.raisinsta.com'
   - '+.raiyi.com'
   - '+.rajax.me'
-  - '+.rajjzs.com'
   - '+.rakinda-xm.com'
   - '+.ralf.ren'
   - '+.ramadaplaza-ovwh.com'
@@ -44917,6 +44917,7 @@ payload:
   - '+.rdnsdb.com'
   - '+.rdplat.com'
   - '+.rdsdk.com'
+  - '+.rdsqs.net'
   - '+.rdsvsh.com'
   - '+.rdtuijian.com'
   - '+.rdwork.com'
@@ -48274,6 +48275,7 @@ payload:
   - '+.skyzms.com'
   - '+.sl-360.com'
   - '+.sl.al'
+  - '+.sl153.com'
   - '+.sl91d.com'
   - '+.slamtec.com'
   - '+.slanissue.com'
@@ -48911,7 +48913,6 @@ payload:
   - '+.spibj.com'
   - '+.spiiker.com'
   - '+.spin-view.com'
-  - '+.spinytech.com'
   - '+.spirit-doll.net'
   - '+.spirithy.com'
   - '+.spischolar.com'
@@ -49738,7 +49739,6 @@ payload:
   - '+.sxol.com'
   - '+.sxpdf.com'
   - '+.sxpdk.com'
-  - '+.sxpjp.com'
   - '+.sxplc.com'
   - '+.sxpmg.com'
   - '+.sxprgc.com'
@@ -51799,6 +51799,7 @@ payload:
   - '+.toursforfun.com'
   - '+.tourye.com'
   - '+.toushibao.com'
+  - '+.toushivip.com'
   - '+.toutiao-xinwen.com'
   - '+.toutiao.com'
   - '+.toutiao.io'
@@ -52871,7 +52872,6 @@ payload:
   - '+.ugubl.net'
   - '+.ugxsd.com'
   - '+.uhandak.com'
-  - '+.uhgal.com'
   - '+.uhomecp.com'
   - '+.uhomes.com'
   - '+.uhouzz.com'
@@ -55121,6 +55121,7 @@ payload:
   - '+.wenshijiawei.com'
   - '+.wenshitiandi.com'
   - '+.wenshuba.com'
+  - '+.wenshubang.com'
   - '+.wensuocaster.com'
   - '+.wenten.net'
   - '+.wentu.io'
@@ -55409,7 +55410,6 @@ payload:
   - '+.whkingdom.com'
   - '+.whkjz.com'
   - '+.whkpcnc.com'
-  - '+.whkt.net'
   - '+.whkyjz.com'
   - '+.whkykj.com'
   - '+.whland.com'
@@ -57970,7 +57970,6 @@ payload:
   - '+.xinggan.com'
   - '+.xinggan.net'
   - '+.xinghai365.com'
-  - '+.xinghao8.xyz'
   - '+.xinghengedu.com'
   - '+.xinghuankj.com'
   - '+.xinghuo100.com'
@@ -59102,7 +59101,6 @@ payload:
   - '+.xuyuanyi.com'
   - '+.xuzhi.net'
   - '+.xuzhoujob.com'
-  - '+.xvision.club'
   - '+.xvista.com'
   - '+.xvv.cc'
   - '+.xw-china.com'
@@ -59486,7 +59484,6 @@ payload:
   - '+.yangqu.com'
   - '+.yangsam.com'
   - '+.yangshengliang.com'
-  - '+.yangshengpu.com'
   - '+.yangshitianqi.com'
   - '+.yangtaiapp.com'
   - '+.yangtengfei.com'
@@ -59853,7 +59850,6 @@ payload:
   - '+.yesapi.net'
   - '+.yesbt.cc'
   - '+.yesdecor.com'
-  - '+.yeseesports.com'
   - '+.yesense.com'
   - '+.yeshen.com'
   - '+.yeshengarts.com'
@@ -60296,7 +60292,6 @@ payload:
   - '+.yingxiahome.com'
   - '+.yingxiaoo.com'
   - '+.yingxiong.com'
-  - '+.yingxuan.io'
   - '+.yingyang630.com'
   - '+.yingyinglicai.com'
   - '+.yingyonghao8.com'
@@ -62294,6 +62289,7 @@ payload:
   - '+.z5a.com'
   - '+.z5encrypt.com'
   - '+.z5z4.com'
+  - '+.z6r7.com'
   - '+.z701.com'
   - '+.z7xz.com'
   - '+.z7ys.com'
@@ -63604,7 +63600,6 @@ payload:
   - '+.zhubangbang.com'
   - '+.zhubao.com'
   - '+.zhubao668.com'
-  - '+.zhubaojizhen.com'
   - '+.zhubian.com'
   - '+.zhubiaoju.com'
   - '+.zhubijiao.com'
@@ -63792,7 +63787,6 @@ payload:
   - '+.zidian8.com'
   - '+.zidoo.tv'
   - '+.zidootv.com'
-  - '+.ziewje.com'
   - '+.zifandiaosu.com'
   - '+.zifeiwuya.com'
   - '+.zifumao.com'
@@ -64495,7 +64489,6 @@ payload:
   - '+.zsr.cc'
   - '+.zsso03.com'
   - '+.zssph.com'
-  - '+.zssq8.com'
   - '+.zssxczxyey.com'
   - '+.zstack.io'
   - '+.zstzs.com'
