--- a/directbak.yaml
+++ b/directbak.yaml
@@ -13,7 +13,6 @@ payload:
   - '+.000e.com'
   - '+.001.com'
   - '+.001133.app'
-  - '+.0012482.com'
   - '+.001daima.com'
   - '+.001en.com'
   - '+.001jm.com'
@@ -4824,7 +4823,6 @@ payload:
   - '+.59edu.com'
   - '+.59hs.com'
   - '+.59iedu.com'
-  - '+.59na.com'
   - '+.59pk.net'
   - '+.59store.com'
   - '+.59w.net'
@@ -5854,7 +5852,6 @@ payload:
   - '+.800lj.com'
   - '+.800mei.net'
   - '+.800pharm.com'
-  - '+.800t.net'
   - '+.800tu.com'
   - '+.800ux.com'
   - '+.800vod.com'
@@ -6421,7 +6418,6 @@ payload:
   - '+.91huayi.com'
   - '+.91huoke.com'
   - '+.91ios.com'
-  - '+.91jbz.com'
   - '+.91jf.com'
   - '+.91jiabohui.com'
   - '+.91jiafang.com'
@@ -7359,6 +7355,7 @@ payload:
   - '+.addsxz.com'
   - '+.adeaz.com'
   - '+.adebang.com'
+  - '+.adebibi.com'
   - '+.adeline.cc'
   - '+.adesk.com'
   - '+.adexplain.com'
@@ -8891,7 +8888,6 @@ payload:
   - '+.appying.com'
   - '+.appykt.com'
   - '+.appzhonghua.com'
-  - '+.apqianzhuo.com'
   - '+.apsgo.com'
   - '+.apt.so'
   - '+.aptchina.com'
@@ -11083,7 +11079,6 @@ payload:
   - '+.bjmjm.com'
   - '+.bjmslp.com'
   - '+.bjmti.com'
-  - '+.bjmyw.com'
   - '+.bjnaxl.com'
   - '+.bjnsr.com'
   - '+.bjp321.com'
@@ -16484,7 +16479,6 @@ payload:
   - '+.csdh.com'
   - '+.csdian.net'
   - '+.csdiy.wiki'
-  - '+.csdjy.com'
   - '+.csdn.com'
   - '+.csdn.net'
   - '+.csdndx.net'
@@ -27331,7 +27325,6 @@ payload:
   - '+.hsiii.com'
   - '+.hsjk.com'
   - '+.hsjkaoyan.com'
-  - '+.hsjss.com'
   - '+.hslj.net'
   - '+.hsmc.com'
   - '+.hsmdb.com'
@@ -30200,7 +30193,6 @@ payload:
   - '+.itaotuo.com'
   - '+.itaoyun.com'
   - '+.itavcn.com'
-  - '+.itazhi.com'
   - '+.itbegin.com'
   - '+.itbeihe.com'
   - '+.itbiaoju.com'
@@ -32809,7 +32801,6 @@ payload:
   - '+.jx3mogu.com'
   - '+.jx3pve.com'
   - '+.jx3tong.com'
-  - '+.jx3yymj.com'
   - '+.jxage.com'
   - '+.jxal.net'
   - '+.jxbhwl.com'
@@ -33939,7 +33930,6 @@ payload:
   - '+.koorun.com'
   - '+.kooshui.com'
   - '+.kooteam.com'
-  - '+.koouoo.com'
   - '+.koovin.com'
   - '+.koovoo.com'
   - '+.koowo.com'
@@ -34018,7 +34008,6 @@ payload:
   - '+.krszf.com'
   - '+.krwz.com'
   - '+.krxo588peycx.com'
-  - '+.krzer.com'
   - '+.krzzjn.com'
   - '+.ks-cdn.com'
   - '+.ks-cdn1.com'
@@ -36304,7 +36293,6 @@ payload:
   - '+.loldytt.org'
   - '+.loldytt.tv'
   - '+.lolgo.net'
-  - '+.loli.cd'
   - '+.loli.cloud'
   - '+.loli.ee'
   - '+.loli.my'
@@ -40480,7 +40468,6 @@ payload:
   - '+.njxsmfyh.com'
   - '+.njxsmz.com'
   - '+.njxzwh.com'
-  - '+.njyayishipin.net'
   - '+.njycwy.com'
   - '+.njyingtaoya.com'
   - '+.njyongji.com'
@@ -44199,7 +44186,6 @@ payload:
   - '+.qqtlr.com'
   - '+.qqtn.com'
   - '+.qqtouxiangzq.com'
-  - '+.qqttxx.com'
   - '+.qqtu8.com'
   - '+.qqtz.com'
   - '+.qqu.cc'
@@ -44785,7 +44771,6 @@ payload:
   - '+.raspigeek.com'
   - '+.rastargame.com'
   - '+.rata-catering.com'
-  - '+.ratina.org'
   - '+.rationmcu.com'
   - '+.ratuo.com'
   - '+.ray-joy.com'
@@ -47166,7 +47151,6 @@ payload:
   - '+.shiningmidas.com'
   - '+.shinnytech.com'
   - '+.shinsoukun.com'
-  - '+.shinybbs.info'
   - '+.shinycg.com'
   - '+.shinyway.org'
   - '+.shiove.com'
@@ -50022,7 +50006,6 @@ payload:
   - '+.sztalent.org'
   - '+.sztara.com'
   - '+.sztkc.com'
-  - '+.sztmt.com'
   - '+.sztopbrand.com'
   - '+.sztspi.com'
   - '+.sztxcpa.com'
@@ -52010,7 +51993,6 @@ payload:
   - '+.tt1386.com'
   - '+.tt1h.com'
   - '+.tt286.com'
-  - '+.tt56w.com'
   - '+.tt96596.com'
   - '+.ttaidu.com'
   - '+.ttbba.com'
@@ -52492,7 +52474,6 @@ payload:
   - '+.ty2y.com'
   - '+.ty3w.net'
   - '+.ty8866.com'
-  - '+.tya.company'
   - '+.tyalxx.com'
   - '+.tybai.com'
   - '+.tyc100.com'
@@ -53347,7 +53328,6 @@ payload:
   - '+.v6ok.com'
   - '+.v78q.com'
   - '+.v86.org'
-  - '+.v8d8.com'
   - '+.v977.com'
   - '+.v9b5n91.com'
   - '+.va-etong.com'
@@ -57317,7 +57297,6 @@ payload:
   - '+.xianlife.com'
   - '+.xianms.com'
   - '+.xianniuzu.com'
-  - '+.xiannvtu.com'
   - '+.xianpp.com'
   - '+.xianruan.com'
   - '+.xianshiqiba.com'
@@ -60580,7 +60559,6 @@ payload:
   - '+.yluu.com'
   - '+.ylwl.cc'
   - '+.ylws.net'
-  - '+.ylwt33.com'
   - '+.ylwyw.com'
   - '+.ylxbxgtg.com'
   - '+.ylxdtww.com'
@@ -64812,7 +64790,6 @@ payload:
   - '+.zyzkb.net'
   - '+.zyzw.com'
   - '+.zyzxs.com'
-  - '+.zz-news.com'
   - '+.zz-qq.com'
   - '+.zz-zigzag.com'
   - '+.zz21.com'
