--- a/directbak.yaml
+++ b/directbak.yaml
@@ -256,7 +256,6 @@ payload:
   - '+.02kdid.com'
   - '+.02lu.com'
   - '+.02o.pw'
-  - '+.02shu.cc'
   - '+.02shu.com'
   - '+.02wan.com'
   - '+.02wq.com'
@@ -5046,7 +5045,6 @@ payload:
   - '+.607777.cc'
   - '+.6080d.com'
   - '+.6080j.com'
-  - '+.6080k.com'
   - '+.6090b.com'
   - '+.609999.xyz'
   - '+.60dj.com'
@@ -5332,6 +5330,7 @@ payload:
   - '+.69cy.net'
   - '+.69hr.com'
   - '+.69jianzhi.com'
+  - '+.69mok.com'
   - '+.69ps.com'
   - '+.69shu.org'
   - '+.69xiu.com'
@@ -15081,7 +15080,6 @@ payload:
   - '+.clyric.com'
   - '+.clz.me'
   - '+.clzqlhj.com'
-  - '+.clzycld.com'
   - '+.cm-analysis.com'
   - '+.cm-iov.com'
   - '+.cm-worklink.com'
@@ -22812,6 +22810,7 @@ payload:
   - '+.gameiy.com'
   - '+.gamejym.com'
   - '+.gamekee.com'
+  - '+.gamekuaishou.com'
   - '+.gameley.com'
   - '+.gameloveman.com'
   - '+.gamemale.com'
@@ -33510,6 +33509,7 @@ payload:
   - '+.kexianggroup.com'
   - '+.kexin001.com'
   - '+.kexing100.com'
+  - '+.kexingchem.com'
   - '+.kexinguoji.com'
   - '+.kexinhaoma.org'
   - '+.kexinyun.org'
@@ -42385,7 +42385,6 @@ payload:
   - '+.pingxuan123.com'
   - '+.pingxx.com'
   - '+.pingyin.cc'
-  - '+.pingyou.cc'
   - '+.pinhaohuo.com'
   - '+.pinhuba.com'
   - '+.pinhui001.com'
@@ -44622,6 +44621,7 @@ payload:
   - '+.qyham.com'
   - '+.qyi.io'
   - '+.qyiliao.com'
+  - '+.qyjks.com'
   - '+.qyjpzx.com'
   - '+.qykh2009.com'
   - '+.qyle1.com'
@@ -50502,7 +50502,6 @@ payload:
   - '+.tc199.net'
   - '+.tc9011.com'
   - '+.tc930.com'
-  - '+.tccaijing.com'
   - '+.tccqb.com'
   - '+.tccxfw.com'
   - '+.tcdai.com'
@@ -56634,7 +56633,6 @@ payload:
   - '+.wy213.com'
   - '+.wyaoqing.com'
   - '+.wybbao.com'
-  - '+.wybg666.com'
   - '+.wybgs.com'
   - '+.wycanyin.com'
   - '+.wycntv.com'
@@ -56986,6 +56984,7 @@ payload:
   - '+.xdh0808.com'
   - '+.xdhbs.com'
   - '+.xdhcn.com'
+  - '+.xdiarys.com'
   - '+.xdj-sz.com'
   - '+.xdja.com'
   - '+.xdjc.org'
