--- a/directbak.yaml
+++ b/directbak.yaml
@@ -857,6 +857,7 @@ payload:
   - '+.10yougame.com'
   - '+.10zk.com'
   - '+.110.com'
+  - '+.11000.vip'
   - '+.11000011.com'
   - '+.1109.com'
   - '+.110hack.com'
@@ -932,6 +933,7 @@ payload:
   - '+.11544.com'
   - '+.1155.com'
   - '+.1155871.com'
+  - '+.1156.com'
   - '+.1156dns.com'
   - '+.115800.com'
   - '+.1158pk.com'
@@ -1330,7 +1332,6 @@ payload:
   - '+.1668.net'
   - '+.1669la.com'
   - '+.166cai.com'
-  - '+.166ks.net'
   - '+.166sh.com'
   - '+.166xs.cc'
   - '+.166zw.com'
@@ -2591,12 +2592,14 @@ payload:
   - '+.3230.com'
   - '+.3234.com'
   - '+.323507.com'
+  - '+.3237.com'
   - '+.323700.net'
   - '+.324.com'
   - '+.3259.com'
   - '+.32800.com'
   - '+.328f.com'
   - '+.328vip.com'
+  - '+.3290.com'
   - '+.32ka.com'
   - '+.32r.com'
   - '+.32wan.com'
@@ -2667,6 +2670,7 @@ payload:
   - '+.334433.xyz'
   - '+.3344u.com'
   - '+.33519.com'
+  - '+.3359.com'
   - '+.3361.com'
   - '+.3366.com'
   - '+.3366.net'
@@ -2896,6 +2900,7 @@ payload:
   - '+.363lm.com'
   - '+.363u.com'
   - '+.364000.com'
+  - '+.365111.com'
   - '+.365128.com'
   - '+.365135.com'
   - '+.36524hua.com'
@@ -3394,6 +3399,7 @@ payload:
   - '+.4377info.com'
   - '+.437zhifu.com'
   - '+.439.cc'
+  - '+.4393.cc'
   - '+.4399-xyx.com'
   - '+.4399.com'
   - '+.4399.net'
@@ -3649,6 +3655,7 @@ payload:
   - '+.515car.com'
   - '+.515ha.com'
   - '+.515ppt.com'
+  - '+.5163.com'
   - '+.51658042.com'
   - '+.51661182.com'
   - '+.5166ys.com'
@@ -5043,6 +5050,8 @@ payload:
   - '+.6070.tv'
   - '+.6071.com'
   - '+.607777.cc'
+  - '+.608.com'
+  - '+.608.vip'
   - '+.6080d.com'
   - '+.6080j.com'
   - '+.6090b.com'
@@ -5067,6 +5076,7 @@ payload:
   - '+.6137.net'
   - '+.61611.net'
   - '+.616182863.com'
+  - '+.6163.com'
   - '+.6164.com'
   - '+.61658.com'
   - '+.6168511.com'
@@ -5452,6 +5462,7 @@ payload:
   - '+.7139.com'
   - '+.715083.com'
   - '+.715300.com'
+  - '+.7163.com'
   - '+.71668.net'
   - '+.71714.com'
   - '+.7172737.com'
@@ -5515,6 +5526,7 @@ payload:
   - '+.72xuan.com'
   - '+.72yun.com'
   - '+.72zx.com'
+  - '+.731.tv'
   - '+.73232yx.com'
   - '+.732732.com'
   - '+.734969.com'
@@ -5956,6 +5968,7 @@ payload:
   - '+.82ip.com'
   - '+.82ky.com'
   - '+.82pk.com'
+  - '+.83084.com'
   - '+.83133.com'
   - '+.832200.com'
   - '+.8325.com'
@@ -6691,6 +6704,7 @@ payload:
   - '+.9560.cc'
   - '+.9564.com'
   - '+.9565.com'
+  - '+.9570.me'
   - '+.9588.com'
   - '+.9596956.com'
   - '+.95book.com'
@@ -6869,6 +6883,7 @@ payload:
   - '+.998.com'
   - '+.9981seo.com'
   - '+.9981ypk.com'
+  - '+.9982.com'
   - '+.99887w.com'
   - '+.998jk.com'
   - '+.998jx.com'
@@ -7273,6 +7288,7 @@ payload:
   - '+.acgw.pw'
   - '+.acgz.xyz'
   - '+.acgzc.com'
+  - '+.acgzyj.com'
   - '+.achiming.com'
   - '+.achsd.com'
   - '+.aci-wh.com'
@@ -11379,6 +11395,7 @@ payload:
   - '+.boanying.com'
   - '+.bob-cardif.com'
   - '+.bob-leasing.com'
+  - '+.bob.com'
   - '+.bob2012.com'
   - '+.bob4885.com'
   - '+.bobaow.com'
@@ -11702,6 +11719,7 @@ payload:
   - '+.bt.cc'
   - '+.bt113.com'
   - '+.bt6.club'
+  - '+.bt66.tv'
   - '+.bt9527.com'
   - '+.btb8.com'
   - '+.btba.cc'
@@ -11937,6 +11955,7 @@ payload:
   - '+.bxzxw.com'
   - '+.by-health.com'
   - '+.by56.com'
+  - '+.by6.app'
   - '+.by6sx.com'
   - '+.byai.com'
   - '+.bybieyang.com'
@@ -14290,6 +14309,7 @@ payload:
   - '+.chinatourguide.com'
   - '+.chinatpm.com'
   - '+.chinatpm.net'
+  - '+.chinatrace.org'
   - '+.chinatranslation.net'
   - '+.chinatravel.net'
   - '+.chinatraveldepot.com'
@@ -23190,7 +23210,6 @@ payload:
   - '+.gec123.com'
   - '+.geci345.com'
   - '+.gecimi.com'
-  - '+.geciwang.net'
   - '+.gedou8.com'
   - '+.gedoumi.com'
   - '+.gedu.org'
@@ -23350,6 +23369,7 @@ payload:
   - '+.gezkdx7.com'
   - '+.gf-cloud.com'
   - '+.gf-funds.com'
+  - '+.gf.app'
   - '+.gf.cc'
   - '+.gfan.com'
   - '+.gfanstore.com'
@@ -23516,6 +23536,7 @@ payload:
   - '+.giveme5.cc'
   - '+.giyu8.com'
   - '+.gizwits.com'
+  - '+.gj.app'
   - '+.gj515.com'
   - '+.gjalk.com'
   - '+.gjb9001b.com'
@@ -24477,6 +24498,7 @@ payload:
   - '+.guotv.com'
   - '+.guowaidiaocha.com'
   - '+.guowaitianqi.com'
+  - '+.guoweitong.com'
   - '+.guoxiehao.com'
   - '+.guoxingjun.com'
   - '+.guoxinqh.com'
@@ -26483,7 +26505,6 @@ payload:
   - '+.himigame.com'
   - '+.himmpat.com'
   - '+.himofi.com'
-  - '+.himuzik.net'
   - '+.himy2.com'
   - '+.hinabian.com'
   - '+.hinavi.net'
@@ -27685,6 +27706,7 @@ payload:
   - '+.huaxia77.com'
   - '+.huaxiaci.com'
   - '+.huaxiaf.com'
+  - '+.huaxiald.com'
   - '+.huaxiangdiao.com'
   - '+.huaxianpai.com'
   - '+.huaxiao5.com'
@@ -31418,6 +31440,7 @@ payload:
   - '+.jimufund.com'
   - '+.jimuhezi.com'
   - '+.jimujiazx.com'
+  - '+.jin.red'
   - '+.jin10.com'
   - '+.jin10x.com'
   - '+.jinanguanggao.com'
@@ -32439,6 +32462,7 @@ payload:
   - '+.jsqlawer.com'
   - '+.jsqq.net'
   - '+.jsqsjn.com'
+  - '+.jsqstg.com'
   - '+.jsqt.com'
   - '+.jsrcu.com'
   - '+.jsrrcb.com'
@@ -32744,6 +32768,7 @@ payload:
   - '+.juweixin.com'
   - '+.juxia.com'
   - '+.juxin.tv'
+  - '+.juxin123.com'
   - '+.juxinfu.com'
   - '+.juxing-edu.com'
   - '+.juxingyi.com'
@@ -34528,7 +34553,6 @@ payload:
   - '+.ladymetro.com'
   - '+.ladystr.com'
   - '+.lafaso.com'
-  - '+.lafhzx.com'
   - '+.lagou.com'
   - '+.lagouevents.com'
   - '+.lagoujobs.com'
@@ -34894,7 +34918,6 @@ payload:
   - '+.lbjljc.com'
   - '+.lbkrs.com'
   - '+.lbl520.com'
-  - '+.lboyue.com'
   - '+.lbsmshop.com'
   - '+.lbsrmyy.com'
   - '+.lbwbw.com'
@@ -35298,6 +35321,7 @@ payload:
   - '+.leyoucp.com'
   - '+.leyoujia.com'
   - '+.leyouquan.com'
+  - '+.leyu.com'
   - '+.leyubox.com'
   - '+.leyue100.com'
   - '+.leyun001.com'
@@ -36969,7 +36993,6 @@ payload:
   - '+.lyblog.net'
   - '+.lybol.com'
   - '+.lybus.com'
-  - '+.lycgs.com'
   - '+.lycheer.net'
   - '+.lycndq.com'
   - '+.lyd6688.com'
@@ -37673,7 +37696,6 @@ payload:
   - '+.mcchcdn.com'
   - '+.mcchina.com'
   - '+.mcchou.com'
-  - '+.mccuu.com'
   - '+.mcdchina.net'
   - '+.mcdsusan.com'
   - '+.mcdusiv.com'
@@ -37868,7 +37890,6 @@ payload:
   - '+.meikr.com'
   - '+.meiktv.com'
   - '+.meiku123.com'
-  - '+.meilanfangdajuyuan.org'
   - '+.meilecui.com'
   - '+.meili-inc.com'
   - '+.meilibaobao.com'
@@ -37928,7 +37949,6 @@ payload:
   - '+.meishow.com'
   - '+.meishubao.com'
   - '+.meishuquan.net'
-  - '+.meishuwenxian.com'
   - '+.meisubq.com'
   - '+.meisupic.com'
   - '+.meitangdehulu.com'
@@ -38616,6 +38636,7 @@ payload:
   - '+.mjoys.com'
   - '+.mjrui.com'
   - '+.mjtom.com'
+  - '+.mjxhgdl.com'
   - '+.mjyun.com'
   - '+.mjyx.com'
   - '+.mjzj.com'
@@ -40022,7 +40043,6 @@ payload:
   - '+.nepian.com'
   - '+.neptcn.com'
   - '+.nercel.com'
-  - '+.nerocn.com'
   - '+.nesbbs.com'
   - '+.nestgene.com'
   - '+.nestlechinese.com'
@@ -40705,6 +40725,7 @@ payload:
   - '+.nswyun.com'
   - '+.nsydt.com'
   - '+.nszmz.com'
+  - '+.nt.app'
   - '+.nt.cc'
   - '+.ntalker.com'
   - '+.ntaow.com'
@@ -41955,6 +41976,7 @@ payload:
   - '+.pcnsh.com'
   - '+.pcoic.com'
   - '+.pcpop.com'
+  - '+.pcr9170.com'
   - '+.pcsee.org'
   - '+.pcshou.com'
   - '+.pct86.com'
@@ -43208,6 +43230,7 @@ payload:
   - '+.qcy.com'
   - '+.qcymall.com'
   - '+.qcyoung.com'
+  - '+.qczb.app'
   - '+.qd-metro.com'
   - '+.qd-weimob.com'
   - '+.qd256.com'
@@ -43229,6 +43252,7 @@ payload:
   - '+.qdcypf.com'
   - '+.qdcz.com'
   - '+.qddown.com'
+  - '+.qddsjx.com'
   - '+.qdfuns.com'
   - '+.qdgaoshanyun.com'
   - '+.qdgw.com'
@@ -43939,6 +43963,7 @@ payload:
   - '+.qiyouwang.com'
   - '+.qiyouworld.com'
   - '+.qiyouyuan.com'
+  - '+.qiyouzy.com'
   - '+.qiyqh.com'
   - '+.qiytech.com'
   - '+.qiyuange.com'
@@ -44073,6 +44098,7 @@ payload:
   - '+.qosq.com'
   - '+.qp110.com'
   - '+.qp46.com'
+  - '+.qp666.com'
   - '+.qp832.com'
   - '+.qpaimg.com'
   - '+.qpb187.com'
@@ -44178,6 +44204,7 @@ payload:
   - '+.qqstudent.com'
   - '+.qqsurvey.net'
   - '+.qqswzx.com'
+  - '+.qqt.com'
   - '+.qqt6.com'
   - '+.qqteacher.com'
   - '+.qqtest.com'
@@ -45658,6 +45685,7 @@ payload:
   - '+.rzline.com'
   - '+.rzok.net'
   - '+.rzszp.com'
+  - '+.rzwssy.com'
   - '+.rzx.me'
   - '+.rzzyfw.com'
   - '+.s-02.com'
@@ -46037,6 +46065,7 @@ payload:
   - '+.scmroad.com'
   - '+.scmsky.com'
   - '+.scmttec.com'
+  - '+.scmxjs.com'
   - '+.scmylike.com'
   - '+.scnjnews.com'
   - '+.scnleee.com'
@@ -47378,7 +47407,6 @@ payload:
   - '+.showxue.com'
   - '+.showyu.com'
   - '+.shoyoo.com'
-  - '+.shpanli.com'
   - '+.shpans.com'
   - '+.shpanyou.com'
   - '+.shpd.net'
@@ -48040,6 +48068,7 @@ payload:
   - '+.sjfs.xyz'
   - '+.sjfzxm.com'
   - '+.sjgh94.com'
+  - '+.sjgle.com'
   - '+.sjgnskf.com'
   - '+.sjhcip.com'
   - '+.sjhfrj.com'
@@ -49691,6 +49720,7 @@ payload:
   - '+.sxy7.com'
   - '+.sxycrb.com'
   - '+.sxyj.net'
+  - '+.sxzb.app'
   - '+.sxzfcy.com'
   - '+.sxzhaobiao.com'
   - '+.sxzlycl.com'
@@ -49995,6 +50025,7 @@ payload:
   - '+.szsia.com'
   - '+.szsing.com'
   - '+.szsjtjj.com'
+  - '+.szsjxxpt.com'
   - '+.szsky.com'
   - '+.szslhssy.com'
   - '+.szsmk.com'
@@ -50833,6 +50864,7 @@ payload:
   - '+.tgovcloud.com'
   - '+.tgshiguan.com'
   - '+.tgyoo.com'
+  - '+.th.app'
   - '+.th38.com'
   - '+.thaiyuehealth.com'
   - '+.thamco.com'
@@ -50884,6 +50916,7 @@ payload:
   - '+.thenburn.com'
   - '+.thenew123.com'
   - '+.theorychina.org'
+  - '+.thep196.cc'
   - '+.thesmartmelon.com'
   - '+.thestack.net'
   - '+.thethirdmedia.com'
@@ -52467,6 +52500,7 @@ payload:
   - '+.txyes.com'
   - '+.txylab.com'
   - '+.txzad.com'
+  - '+.txzb.app'
   - '+.txzing.com'
   - '+.ty-im.com'
   - '+.ty-tyre.com'
@@ -52528,6 +52562,7 @@ payload:
   - '+.tyzscl.com'
   - '+.tz-dsp.com'
   - '+.tz-wf.com'
+  - '+.tz.app'
   - '+.tz089.com'
   - '+.tz121.com'
   - '+.tz12306.com'
@@ -53828,6 +53863,7 @@ payload:
   - '+.vpser.net'
   - '+.vpsjie.com'
   - '+.vpsjxw.com'
+  - '+.vpsmm.com'
   - '+.vpsoff.net'
   - '+.vpsor.com'
   - '+.vpsqb.com'
@@ -56419,6 +56455,7 @@ payload:
   - '+.wutep.com'
   - '+.wutianqi.com'
   - '+.wutnews.net'
+  - '+.wutongbao123.xyz'
   - '+.wutongguo.com'
   - '+.wutongshanxia.com'
   - '+.wutongtec.com'
@@ -58072,6 +58109,7 @@ payload:
   - '+.xinxinkeji168.com'
   - '+.xinxinshukong.com'
   - '+.xinxisea.com'
+  - '+.xinxue-edu.com'
   - '+.xinxuezl.com'
   - '+.xinxuezx.com'
   - '+.xinxunwang.com'
@@ -58555,7 +58593,6 @@ payload:
   - '+.xnzjxx.com'
   - '+.xnzn.net'
   - '+.xoao.com'
-  - '+.xocoder.com'
   - '+.xoliao.com'
   - '+.xooooa.com'
   - '+.xorpay.com'
@@ -59556,6 +59593,7 @@ payload:
   - '+.ybscjp.com'
   - '+.ybtong.com'
   - '+.ybtvyun.com'
+  - '+.ybvip.com'
   - '+.ybvipdns.com'
   - '+.ybvv.com'
   - '+.ybword.com'
@@ -60497,6 +60535,8 @@ payload:
   - '+.yjxsoft.com'
   - '+.yjyghb.com'
   - '+.yjz9.com'
+  - '+.yjzb.app'
+  - '+.yjzb.tv'
   - '+.yk08.com'
   - '+.yk211.com'
   - '+.ykccn.com'
@@ -60522,6 +60562,7 @@ payload:
   - '+.yktz.net'
   - '+.ykyao.com'
   - '+.ykzr.com'
+  - '+.yl.vip'
   - '+.yl1001.com'
   - '+.yladm.com'
   - '+.ylallinone.com'
@@ -60627,6 +60668,7 @@ payload:
   - '+.yn12396.com'
   - '+.yn58.com'
   - '+.ynairport.com'
+  - '+.ynaquatic-foods.com'
   - '+.ynb2dca.com'
   - '+.ynbit.com'
   - '+.ynbojie.com'
@@ -63426,7 +63468,6 @@ payload:
   - '+.zhtmid.com'
   - '+.zhu.cm'
   - '+.zhu360.com'
-  - '+.zhu7jie.com'
   - '+.zhuainiu.com'
   - '+.zhuan16.com'
   - '+.zhuanfa.net'
