--- a/directbak.yaml
+++ b/directbak.yaml
@@ -210,7 +210,6 @@ payload:
   - '+.027cloud.com'
   - '+.027down.com'
   - '+.027eat.com'
-  - '+.027fcyy.com'
   - '+.027hhl.com'
   - '+.027hpedu.com'
   - '+.027hpit.com'
@@ -271,7 +270,6 @@ payload:
   - '+.0335e.com'
   - '+.03412.com'
   - '+.034666.com'
-  - '+.0349.info'
   - '+.035110000.com'
   - '+.0351data.com'
   - '+.0351fdc.com'
@@ -372,7 +370,6 @@ payload:
   - '+.0554news.com'
   - '+.0554zp.com'
   - '+.0555dsw.com'
-  - '+.0555fc.com'
   - '+.0558zp.com'
   - '+.0559fc.com'
   - '+.0561house.com'
@@ -2086,7 +2083,6 @@ payload:
   - '+.222bz.com'
   - '+.222i.net'
   - '+.223.so'
-  - '+.22332008.com'
   - '+.2239.com'
   - '+.224.com'
   - '+.22442400.com'
@@ -2414,6 +2410,7 @@ payload:
   - '+.2ibook.com'
   - '+.2ic.cc'
   - '+.2ita.com'
+  - '+.2itcn.com'
   - '+.2j88.com'
   - '+.2jianli.com'
   - '+.2k2k.com'
@@ -3255,6 +3252,7 @@ payload:
   - '+.3snews.net'
   - '+.3songshu.com'
   - '+.3stl.com'
+  - '+.3t769up6.com'
   - '+.3tilabs.com'
   - '+.3u.com'
   - '+.3uol.com'
@@ -3343,7 +3341,6 @@ payload:
   - '+.404600.com'
   - '+.404forest.com'
   - '+.404mzk.com'
-  - '+.404v.com'
   - '+.404wan.com'
   - '+.404youxi.com'
   - '+.405400.com'
@@ -3615,7 +3612,6 @@ payload:
   - '+.511023.com'
   - '+.51110.com'
   - '+.51119.com'
-  - '+.51168.tv'
   - '+.5117.com'
   - '+.511718.com'
   - '+.5117tools.com'
@@ -3636,7 +3632,6 @@ payload:
   - '+.513523.com'
   - '+.5137.cc'
   - '+.51386.com'
-  - '+.513c51.com'
   - '+.513hjs.com'
   - '+.514193.com'
   - '+.514200.com'
@@ -3826,7 +3821,6 @@ payload:
   - '+.51g3.com'
   - '+.51g3.net'
   - '+.51g4.com'
-  - '+.51gaifang.com'
   - '+.51geeks.com'
   - '+.51gfl.com'
   - '+.51gfw.com'
@@ -4369,7 +4363,6 @@ payload:
   - '+.52jt.net'
   - '+.52jubensha.com'
   - '+.52jxt.com'
-  - '+.52jying.com'
   - '+.52kanxiaoshuo.com'
   - '+.52kb365.com'
   - '+.52kfly.com'
@@ -6713,7 +6706,6 @@ payload:
   - '+.95fenapp.com'
   - '+.95google.com'
   - '+.95gq.com'
-  - '+.95jr.com'
   - '+.95k.com'
   - '+.95links.com'
   - '+.95name.com'
@@ -7832,7 +7824,6 @@ payload:
   - '+.aimeideni.com'
   - '+.aimeike.tv'
   - '+.aimeit.com'
-  - '+.aiminer.cc'
   - '+.aimipay.net'
   - '+.aimiplay.com'
   - '+.aimo.moe'
@@ -8014,7 +8005,6 @@ payload:
   - '+.aizuopin.com'
   - '+.aj4j.icu'
   - '+.ajaxjs.com'
-  - '+.ajaxstu.com'
   - '+.ajbbkf.com'
   - '+.ajcass.org'
   - '+.ajcctv.com'
@@ -8792,7 +8782,6 @@ payload:
   - '+.apkrj.com'
   - '+.apkyx.com'
   - '+.apkzu.com'
-  - '+.aplan.tv'
   - '+.aplum-inc.com'
   - '+.aplum.com'
   - '+.apluscap.com'
@@ -9029,7 +9018,6 @@ payload:
   - '+.artimg.net'
   - '+.artintern.net'
   - '+.artlinkart.com'
-  - '+.artliving.tv'
   - '+.artlnk.com'
   - '+.artnchina.com'
   - '+.artopia-group.com'
@@ -9075,7 +9063,6 @@ payload:
   - '+.asgxsy.com'
   - '+.ashan.org'
   - '+.ashj.com'
-  - '+.ashvsash.com'
   - '+.ashvsash.net'
   - '+.asia-dns.com'
   - '+.asiabt.com'
@@ -9195,7 +9182,6 @@ payload:
   - '+.attri.mobi'
   - '+.atuoyi.com'
   - '+.atwtech.net'
-  - '+.atxwm.com'
   - '+.atyun.net'
   - '+.atzjg.net'
   - '+.atzlinux.com'
@@ -9340,6 +9326,7 @@ payload:
   - '+.aword.net'
   - '+.awotuan.com'
   - '+.awoyun.com'
+  - '+.awsdns-cn-36.net'
   - '+.awsdns-cn-57.com'
   - '+.awsok.com'
   - '+.awspal.com'
@@ -9770,7 +9757,6 @@ payload:
   - '+.bangdao-tech.com'
   - '+.banggo.com'
   - '+.banghaiwai.com'
-  - '+.bangirls.com'
   - '+.bangkao.com'
   - '+.bangkebao.com'
   - '+.banglianai.com'
@@ -9938,7 +9924,6 @@ payload:
   - '+.baoyang1.com'
   - '+.baoyang888.com'
   - '+.baoyangcs.com'
-  - '+.baoyatu.cc'
   - '+.baoyeah.com'
   - '+.baoyt.com'
   - '+.baoyung.com'
@@ -11696,7 +11681,6 @@ payload:
   - '+.bsidu.com'
   - '+.bsjhhzs.com'
   - '+.bsjquanwu.com'
-  - '+.bskk.com'
   - '+.bskrt.com'
   - '+.bskuav.com'
   - '+.bsmz.net'
@@ -11807,7 +11791,6 @@ payload:
   - '+.buduanwang.vip'
   - '+.buduobaobao.com'
   - '+.buffst.com'
-  - '+.bug.im'
   - '+.bugku.com'
   - '+.bugnull.com'
   - '+.bugscan.net'
@@ -11925,7 +11908,6 @@ payload:
   - '+.bx24k.com'
   - '+.bx58.com'
   - '+.bxb2b.com'
-  - '+.bxba.net'
   - '+.bxcc.vip'
   - '+.bxdaka.com'
   - '+.bxdlkj.com'
@@ -13448,7 +13430,6 @@ payload:
   - '+.chaoyindj.com'
   - '+.chaoyinfastcdnbestcdn.vip'
   - '+.chaoyisy.com'
-  - '+.chaoyuelm.com'
   - '+.chaoyuesd.com'
   - '+.chaoyuyun.com'
   - '+.chaozhibm.com'
@@ -15840,7 +15821,6 @@ payload:
   - '+.codebye.com'
   - '+.codecomeon.com'
   - '+.codedefault.com'
-  - '+.codedq.net'
   - '+.codedream.xin'
   - '+.codeforge.com'
   - '+.codehy.com'
@@ -15928,7 +15908,6 @@ payload:
   - '+.coinnice.com'
   - '+.coinsky.com'
   - '+.coinvs.com'
-  - '+.cokemine.com'
   - '+.cokll.com'
   - '+.cokutau.com'
   - '+.coladrive.com'
@@ -16521,6 +16500,7 @@ payload:
   - '+.cshope.net'
   - '+.cshufanyi.com'
   - '+.cshxdc.com'
+  - '+.cshyqx.com'
   - '+.cshzw.com'
   - '+.csic-711.com'
   - '+.csic-ljtech.com'
@@ -17024,7 +17004,6 @@ payload:
   - '+.d1lx.com'
   - '+.d1net.com'
   - '+.d1sm.net'
-  - '+.d1tele.com'
   - '+.d1xf.net'
   - '+.d1xn.com'
   - '+.d1xz.net'
@@ -17696,7 +17675,6 @@ payload:
   - '+.ddswcm.com'
   - '+.ddsy.com'
   - '+.ddtugame.com'
-  - '+.ddtui.com'
   - '+.ddtxgame.com'
   - '+.ddtz5.com'
   - '+.ddun.com'
@@ -18395,7 +18373,6 @@ payload:
   - '+.div.io'
   - '+.divcss5.com'
   - '+.divetgallery.com'
-  - '+.diwenganzaoji.com'
   - '+.diwork.com'
   - '+.dixintong.com'
   - '+.diybcq.com'
@@ -19581,7 +19558,6 @@ payload:
   - '+.dzcjw.com'
   - '+.dzcmedu.com'
   - '+.dzdiy.com'
-  - '+.dzdoll.com'
   - '+.dzdu.com'
   - '+.dzdvip.com'
   - '+.dzfc.com'
@@ -20416,7 +20392,6 @@ payload:
   - '+.emjob.com'
   - '+.emlinix.com'
   - '+.emlog.net'
-  - '+.emohe.com'
   - '+.emojimobile.com'
   - '+.emojiwiz.com'
   - '+.emrl0z.com'
@@ -21584,7 +21559,6 @@ payload:
   - '+.feiyunjs.com'
   - '+.feiyuteam.com'
   - '+.feizan.com'
-  - '+.feizao.tv'
   - '+.feizhaojun.com'
   - '+.feizhu.com'
   - '+.feizhupan.com'
@@ -22552,6 +22526,7 @@ payload:
   - '+.fuxunpay.com'
   - '+.fuyangtv.com'
   - '+.fuych.net'
+  - '+.fuyeor.com'
   - '+.fuyinchina.com'
   - '+.fuyou888.com'
   - '+.fuyoubank.com'
@@ -22637,7 +22612,6 @@ payload:
   - '+.fybxw.com'
   - '+.fychinago.com'
   - '+.fycpu.com'
-  - '+.fydckl.com'
   - '+.fydeos.com'
   - '+.fydmodel.com'
   - '+.fyeds0.com'
@@ -22818,7 +22792,6 @@ payload:
   - '+.gamecomb.com'
   - '+.gamecps.com'
   - '+.gamed9.com'
-  - '+.gamedashi.com'
   - '+.gamedo.org'
   - '+.gameegg.com'
   - '+.gameexp.com'
@@ -23640,7 +23613,6 @@ payload:
   - '+.globeauto.org'
   - '+.globeedu.com'
   - '+.globeimmi.com'
-  - '+.globrand.com'
   - '+.globrand.net'
   - '+.glodon.com'
   - '+.gloryre.com'
@@ -23690,7 +23662,6 @@ payload:
   - '+.gmonline-all.com'
   - '+.gmpanel.com'
   - '+.gmrmyy.com'
-  - '+.gmsjf.com'
   - '+.gmssl.org'
   - '+.gmt-china.org'
   - '+.gmtv.cc'
@@ -24636,7 +24607,6 @@ payload:
   - '+.gxlcms.com'
   - '+.gxlsjt.com'
   - '+.gxlxs2008.net'
-  - '+.gxmenjin.com'
   - '+.gxmlyjy.com'
   - '+.gxmmkt.com'
   - '+.gxnas.com'
@@ -24703,7 +24673,6 @@ payload:
   - '+.gyyqcloud.com'
   - '+.gyzfbz.net'
   - '+.gyzy.com'
-  - '+.gyzygb.com'
   - '+.gz-cmc.com'
   - '+.gz-cube.com'
   - '+.gz-data.com'
@@ -26631,6 +26600,7 @@ payload:
   - '+.hk.uy'
   - '+.hk515.net'
   - '+.hkaco.com'
+  - '+.hkaik.com'
   - '+.hkance.com'
   - '+.hkance.xyz'
   - '+.hkanews.com'
@@ -26720,7 +26690,6 @@ payload:
   - '+.hltcy.com'
   - '+.hlwidc.com'
   - '+.hlxsykd.com'
-  - '+.hlxxq.com'
   - '+.hlxy.com'
   - '+.hly.com'
   - '+.hlybar.com'
@@ -26909,7 +26878,6 @@ payload:
   - '+.hnzhouyi.com'
   - '+.hnzhy.com'
   - '+.hnzjdc.com'
-  - '+.hnzjgfw.com'
   - '+.hnzjip.com'
   - '+.hnzjzx.org'
   - '+.hnzqw.com'
@@ -26985,7 +26953,6 @@ payload:
   - '+.hong-shun.com'
   - '+.hong.ren'
   - '+.hongbao.show'
-  - '+.hongbaorili.com'
   - '+.hongbeibang.com'
   - '+.hongbeicn.com'
   - '+.hongbizi.org'
@@ -27324,7 +27291,6 @@ payload:
   - '+.hsdatalab.com'
   - '+.hsdcw.com'
   - '+.hsddyy.com'
-  - '+.hsdhw.com'
   - '+.hsdmall.com'
   - '+.hsehome.com'
   - '+.hsehome.org'
@@ -27771,7 +27737,6 @@ payload:
   - '+.hubokan.com'
   - '+.hubpd.com'
   - '+.hubu.com'
-  - '+.hububbs.com'
   - '+.hubulab.com'
   - '+.hubwiz.com'
   - '+.hucdn.com'
@@ -28476,7 +28441,6 @@ payload:
   - '+.hzymjx.com'
   - '+.hzyoka.com'
   - '+.hzypro.com'
-  - '+.hzyqkb.com'
   - '+.hzyuanshan.com'
   - '+.hzyuedu.com'
   - '+.hzyuewan.com'
@@ -29021,7 +28985,6 @@ payload:
   - '+.idyzs.com'
   - '+.idzcp.com'
   - '+.idzoom.com'
-  - '+.ie027.com'
   - '+.ie515.com'
   - '+.ie525.com'
   - '+.ie815.com'
@@ -29867,7 +29830,6 @@ payload:
   - '+.iooeoo.com'
   - '+.iopenhec.com'
   - '+.ioqq.com'
-  - '+.ios1234.com'
   - '+.iosappx.com'
   - '+.iosask.com'
   - '+.iosfengwo.com'
@@ -29905,7 +29867,6 @@ payload:
   - '+.ip87.com'
   - '+.ipadown.com'
   - '+.ipadview.com'
-  - '+.ipagame.net'
   - '+.ipaiban.com'
   - '+.ipail.com'
   - '+.ipalfish.com'
@@ -29930,6 +29891,7 @@ payload:
   - '+.ipcxz.com'
   - '+.ipdaili.com'
   - '+.ipddz.com'
+  - '+.ipdfmaster.com'
   - '+.ipdftool.com'
   - '+.ipdianhua.com'
   - '+.ipdsms.com'
@@ -31755,7 +31717,6 @@ payload:
   - '+.jitangcn.com'
   - '+.jitashe.org'
   - '+.jitavip.com'
-  - '+.jiterzzzz.com'
   - '+.jitiku.com'
   - '+.jitongtianxia.com'
   - '+.jitu5.com'
@@ -32340,7 +32301,6 @@ payload:
   - '+.js-ceo.com'
   - '+.js-code.com'
   - '+.js-dys.com'
-  - '+.js-screen.com'
   - '+.js-weilong.com'
   - '+.js.design'
   - '+.js04999.com'
@@ -33029,7 +32989,6 @@ payload:
   - '+.jzyx.com'
   - '+.jzzhw.com'
   - '+.jzzx.com'
-  - '+.jzzy666.com'
   - '+.k-day.com'
   - '+.k-ichiken.com'
   - '+.k-kbox.com'
@@ -33064,7 +33023,6 @@ payload:
   - '+.k7kf.com'
   - '+.k8008.com'
   - '+.k8ba.com'
-  - '+.k8bd.com'
   - '+.k8dream.com'
   - '+.k8jdw.com'
   - '+.k8sj.com'
@@ -33182,7 +33140,6 @@ payload:
   - '+.kandian.net'
   - '+.kandianshi.com'
   - '+.kandzww.com'
-  - '+.kanfangapp.com'
   - '+.kanfangjilu.com'
   - '+.kanfeidie.com'
   - '+.kangaiweishi.com'
@@ -33833,7 +33790,6 @@ payload:
   - '+.kmcenter.org'
   - '+.kmcha.com'
   - '+.kmcits.com'
-  - '+.kmcits0655.com'
   - '+.kmcxedu.com'
   - '+.kmdgpark.com'
   - '+.kmdn.net'
@@ -35193,7 +35149,6 @@ payload:
   - '+.lenovator.com'
   - '+.lenovogame.com'
   - '+.lenovohci.com'
-  - '+.lenovohit.com'
   - '+.lenovohuishang.com'
   - '+.lenovoimage.com'
   - '+.lenovomm.com'
@@ -35339,6 +35294,8 @@ payload:
   - '+.lezhuan168.com'
   - '+.lezhuan365.com'
   - '+.lezi.com'
+  - '+.lezuan.net'
+  - '+.lezuan9.com'
   - '+.lf-tools.net'
   - '+.lf127.net'
   - '+.lfan.net'
@@ -35380,7 +35337,6 @@ payload:
   - '+.lhao88.com'
   - '+.lhave.com'
   - '+.lhdxz.com'
-  - '+.lhdyfc.com'
   - '+.lhflh.com'
   - '+.lhggjd.org'
   - '+.lhh.la'
@@ -36169,7 +36125,6 @@ payload:
   - '+.lltllt.com'
   - '+.lltoken.com'
   - '+.llwin.com'
-  - '+.llwt.ink'
   - '+.llxzu.com'
   - '+.llycloud.com'
   - '+.llzg.com'
@@ -36940,7 +36895,6 @@ payload:
   - '+.lwrcb.com'
   - '+.lwsay.com'
   - '+.lwxgds.com'
-  - '+.lwxs.org'
   - '+.lwxs9.com'
   - '+.lwxstxt.com'
   - '+.lx-led.com'
@@ -37118,7 +37072,6 @@ payload:
   - '+.m2ez.com'
   - '+.m2mzy.com'
   - '+.m3guo.com'
-  - '+.m3u8.tv'
   - '+.m448.com'
   - '+.m4yy.com'
   - '+.m598.com'
@@ -37467,6 +37420,7 @@ payload:
   - '+.manyoo.net'
   - '+.manyou.com'
   - '+.manyoujing.net'
+  - '+.manyupay.com'
   - '+.manzhan.com'
   - '+.manzhan8.com'
   - '+.manzj.net'
@@ -38968,6 +38922,7 @@ payload:
   - '+.moltentec.com'
   - '+.momdm.com'
   - '+.momhui.com'
+  - '+.momiji.fun'
   - '+.momishi.com'
   - '+.momoapk.com'
   - '+.momobako.com'
@@ -40112,6 +40067,7 @@ payload:
   - '+.new-more.com'
   - '+.new-thread.com'
   - '+.new1cloud.com'
+  - '+.new253.com'
   - '+.new669.com'
   - '+.newacademic.net'
   - '+.newadblock.com'
@@ -40834,7 +40790,6 @@ payload:
   - '+.nxecaiji.com'
   - '+.nxengine.com'
   - '+.nxez.com'
-  - '+.nxflcp.com'
   - '+.nxflv.com'
   - '+.nxggzyjy.org'
   - '+.nxgjbyy.com'
@@ -41370,7 +41325,6 @@ payload:
   - '+.oralpractice.com'
   - '+.orange2h.com'
   - '+.orangeapk.com'
-  - '+.orangelive.tv'
   - '+.orangemum.com'
   - '+.orangepi.org'
   - '+.orangetage.com'
@@ -41948,7 +41902,6 @@ payload:
   - '+.pcbhunt.com'
   - '+.pcbiot.com'
   - '+.pcbjob.com'
-  - '+.pcbookcn.com'
   - '+.pcbres.com'
   - '+.pcbserve.com'
   - '+.pcbsheji.com'
@@ -42200,7 +42153,6 @@ payload:
   - '+.photocome.com'
   - '+.photohn.com'
   - '+.photoint.net'
-  - '+.photoneray.com'
   - '+.photopai.com'
   - '+.photops.com'
   - '+.photosanxia.com'
@@ -43479,7 +43431,6 @@ payload:
   - '+.qianlimafile.com'
   - '+.qianlinkj.com'
   - '+.qianlong.com'
-  - '+.qianlongnews.com'
   - '+.qianluxiaoshuo.com'
   - '+.qianmaiapp.com'
   - '+.qianmaidao.com'
@@ -44415,6 +44366,7 @@ payload:
   - '+.qudushu.com'
   - '+.quduwu.com'
   - '+.quduzixun.com'
+  - '+.quectel.com'
   - '+.quegame.com'
   - '+.quegoo.com'
   - '+.quegui.run'
@@ -45253,7 +45205,6 @@ payload:
   - '+.rlwyjf.com'
   - '+.rlydw.com'
   - '+.rlyl.net'
-  - '+.rlzbfc88.xyz'
   - '+.rm-static.djicdn.com'
   - '+.rmb.sh'
   - '+.rmcteam.org'
@@ -45481,6 +45432,7 @@ payload:
   - '+.rssmv.com'
   - '+.rsty77.com'
   - '+.rsw163.com'
+  - '+.rswiki.org'
   - '+.rsxc01.com'
   - '+.rszfg.com'
   - '+.rt-blend.com'
@@ -45681,7 +45633,6 @@ payload:
   - '+.rzcdz2.com'
   - '+.rzfanyi.com'
   - '+.rzhuaqiangu.com'
-  - '+.rzjslm.com'
   - '+.rzline.com'
   - '+.rzok.net'
   - '+.rzszp.com'
@@ -47742,6 +47693,7 @@ payload:
   - '+.shzkb.com'
   - '+.shzpin.com'
   - '+.shzq.com'
+  - '+.shzs-benz-vpc.com'
   - '+.shzsun.com'
   - '+.si-en.com'
   - '+.si-in.com'
@@ -48051,7 +48003,6 @@ payload:
   - '+.sj11hb.com'
   - '+.sj123.com'
   - '+.sj33.net'
-  - '+.sj35hb.com'
   - '+.sj3w.com'
   - '+.sj88.com'
   - '+.sj998.com'
@@ -48638,7 +48589,6 @@ payload:
   - '+.songziren.com'
   - '+.songzixian.com'
   - '+.sonhoo.com'
-  - '+.sonhoo.net'
   - '+.soniu.net'
   - '+.sonkwo.com'
   - '+.sonkwo.hk'
@@ -48960,7 +48910,6 @@ payload:
   - '+.srzc.com'
   - '+.srzxjt.com'
   - '+.ss-ceo.com'
-  - '+.ss0.me'
   - '+.ss6.co'
   - '+.ss8899888.com'
   - '+.ssaxx.com'
@@ -51432,6 +51381,7 @@ payload:
   - '+.tmeiju.com'
   - '+.tmeissheng.com'
   - '+.tmgwdz.vip'
+  - '+.tmhhost.com'
   - '+.tmhong.com'
   - '+.tmhvps.com'
   - '+.tmiep.org'
@@ -52102,7 +52052,6 @@ payload:
   - '+.ttzhongbao.com'
   - '+.ttzw.com'
   - '+.ttzw.tv'
-  - '+.ttzx.tv'
   - '+.ttzyw.com'
   - '+.tu520.cc'
   - '+.tu8.cc'
@@ -52457,7 +52406,6 @@ payload:
   - '+.txcbwgg.com'
   - '+.txcdns.com'
   - '+.txcfgl.com'
-  - '+.txcsjlb.com'
   - '+.txdai.com'
   - '+.txdy01.com'
   - '+.txdzs.com'
@@ -52585,6 +52533,7 @@ payload:
   - '+.tzidt.com'
   - '+.tzjxl.com'
   - '+.tzlib.net'
+  - '+.tzlongwu.com'
   - '+.tzm66.com'
   - '+.tzres.com'
   - '+.tzrl.com'
@@ -52598,7 +52547,6 @@ payload:
   - '+.tzxingtang.com'
   - '+.tzxwzx.com'
   - '+.tzye123.com'
-  - '+.tzza.net'
   - '+.u-jingling.com'
   - '+.u-link.org'
   - '+.u-ls.com'
@@ -53938,6 +53886,7 @@ payload:
   - '+.vtoutiao.cc'
   - '+.vtrois.com'
   - '+.vtuzx.com'
+  - '+.vu99.com'
   - '+.vue-js.com'
   - '+.vue5.com'
   - '+.vuejscaff.com'
@@ -54405,7 +54354,6 @@ payload:
   - '+.wanzaidangxia.com'
   - '+.wanzhao.com'
   - '+.wanzhongcar.com'
-  - '+.wanzhouhr.com'
   - '+.wanzhoumo.com'
   - '+.wanzhuang.com'
   - '+.wanzhuanlea.com'
@@ -55110,6 +55058,7 @@ payload:
   - '+.west263.com'
   - '+.west999.com'
   - '+.westbund.com'
+  - '+.westcits.com'
   - '+.weste.net'
   - '+.westengine.com'
   - '+.westfutu.com'
@@ -56117,7 +56066,6 @@ payload:
   - '+.woxuyuan.com'
   - '+.woyao998.com'
   - '+.woyaobaoliang.com'
-  - '+.woyaofanyi.com'
   - '+.woyaoqiudai.com'
   - '+.woyaosouti.com'
   - '+.woyaozhan.com'
@@ -56879,6 +56827,7 @@ payload:
   - '+.xazzg.com'
   - '+.xazzp.com'
   - '+.xazzs.com'
+  - '+.xb.app'
   - '+.xb21cn.com'
   - '+.xb2s.com'
   - '+.xbaofun.com'
@@ -57776,7 +57725,6 @@ payload:
   - '+.xifumi.com'
   - '+.xifuquan.com'
   - '+.xigeweb.com'
-  - '+.xigo.tv'
   - '+.xigua110.com'
   - '+.xigua5.com'
   - '+.xiguabook.com'
@@ -58665,6 +58613,8 @@ payload:
   - '+.xrwcn.com'
   - '+.xs-servers.com'
   - '+.xs.la'
+  - '+.xs123.net'
+  - '+.xs123.org'
   - '+.xs222.tw'
   - '+.xs2500.com'
   - '+.xs3cnc.com'
@@ -58773,6 +58723,7 @@ payload:
   - '+.xu1s.com'
   - '+.xuanad.com'
   - '+.xuanba.com'
+  - '+.xuanbar.com'
   - '+.xuanbiaoqing.com'
   - '+.xuancaizi.com'
   - '+.xuanceo.com'
@@ -59253,6 +59204,7 @@ payload:
   - '+.xyzmdzs.com'
   - '+.xyzs.com'
   - '+.xyzsq.com'
+  - '+.xyzvo.com'
   - '+.xz-juming.com'
   - '+.xz.com'
   - '+.xz577.com'
@@ -59265,7 +59217,6 @@ payload:
   - '+.xzcblog.com'
   - '+.xzcdc.com'
   - '+.xzddx.com'
-  - '+.xzfi.cc'
   - '+.xzfile.com'
   - '+.xzforu.com'
   - '+.xzggjyzpw.com'
@@ -59447,7 +59398,6 @@ payload:
   - '+.yanjiao.com'
   - '+.yanjiao.net'
   - '+.yanjiaoapp.com'
-  - '+.yanjiaols.com'
   - '+.yanjiaoweixin.com'
   - '+.yanjinews.com'
   - '+.yanjingge.com'
@@ -59658,6 +59608,7 @@ payload:
   - '+.ydaobo.com'
   - '+.ydbimg.com'
   - '+.ydc360.com'
+  - '+.yddff556.xyz'
   - '+.ydh.fun'
   - '+.ydimmi.com'
   - '+.ydjia.com'
@@ -60752,7 +60703,6 @@ payload:
   - '+.yohogirls.com'
   - '+.yoholm.com'
   - '+.yohomars.com'
-  - '+.yohoowin.com'
   - '+.yohoshow.com'
   - '+.yohui.com'
   - '+.yojl.net'
@@ -60937,7 +60887,6 @@ payload:
   - '+.youkongwan.com'
   - '+.youku.com'
   - '+.youkua.net'
-  - '+.youkudou.com'
   - '+.youkudown.com'
   - '+.youkuphoto.com'
   - '+.youlanw.com'
@@ -62247,7 +62196,6 @@ payload:
   - '+.zaiminglvsuo.com'
   - '+.zainanjing365.com'
   - '+.zaisd.com'
-  - '+.zaitianyan.com'
   - '+.zaitong.net'
   - '+.zaitongxiang.com'
   - '+.zaiwai.com'
@@ -62298,7 +62246,6 @@ payload:
   - '+.zaojiu.com'
   - '+.zaojv.com'
   - '+.zaole.net'
-  - '+.zaopang.com'
   - '+.zaoshu.so'
   - '+.zaowandushu.com'
   - '+.zaoxu.com'
@@ -62815,7 +62762,6 @@ payload:
   - '+.zhangyue01.com'
   - '+.zhangyue02.com'
   - '+.zhangyue03.com'
-  - '+.zhangyugg.com'
   - '+.zhangyunling.com'
   - '+.zhangyuqing.me'
   - '+.zhangzhao.me'
@@ -63572,7 +63518,6 @@ payload:
   - '+.zhuji.la'
   - '+.zhuji.net'
   - '+.zhuji5.com'
-  - '+.zhujia120.com'
   - '+.zhujia360.com'
   - '+.zhujian.org'
   - '+.zhujiangbeer.com'
@@ -64587,7 +64532,6 @@ payload:
   - '+.zuojing.com'
   - '+.zuojj.com'
   - '+.zuolinyouli.vip'
-  - '+.zuopinj.com'
   - '+.zuoqu.com'
   - '+.zuoqudashi.net'
   - '+.zuosa.com'
