--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5161,6 +5161,7 @@ payload:
   - '+.65650000.com'
   - '+.65677358625.com'
   - '+.65688qp.com'
+  - '+.6571n.com'
   - '+.65875.com'
   - '+.65918.tw'
   - '+.659595.com'
@@ -6190,6 +6191,7 @@ payload:
   - '+.89274.st'
   - '+.89303.com'
   - '+.8961zx.com'
+  - '+.897263tqs.com'
   - '+.8977567.com'
   - '+.8979.com'
   - '+.898.travel'
@@ -6423,6 +6425,7 @@ payload:
   - '+.91huayi.com'
   - '+.91huoke.com'
   - '+.91ios.com'
+  - '+.91jbz.com'
   - '+.91jf.com'
   - '+.91jiabohui.com'
   - '+.91jiafang.com'
@@ -7675,6 +7678,7 @@ payload:
   - '+.aibaix.com'
   - '+.aibang.com'
   - '+.aibaov.com'
+  - '+.aibe1e.cc'
   - '+.aibing.cc'
   - '+.aibo123.com'
   - '+.aibooks.cc'
@@ -22433,7 +22437,6 @@ payload:
   - '+.fuliapps.com'
   - '+.fuliba2020.net'
   - '+.fulibbs.com'
-  - '+.fulibest.com'
   - '+.fulijd.com'
   - '+.fulimin.org'
   - '+.fulin.org'
@@ -23412,7 +23415,6 @@ payload:
   - '+.ghlearning.com'
   - '+.ghmba.com'
   - '+.ghmcchina.com'
-  - '+.ghmp4.com'
   - '+.gho5.com'
   - '+.ghost008.com'
   - '+.ghost11.com'
@@ -28514,6 +28516,7 @@ payload:
   - '+.i5399.com'
   - '+.i5738.com'
   - '+.i5i6.net'
+  - '+.i5jh6b.cc'
   - '+.i5mai.com'
   - '+.i66wan.com'
   - '+.i6879.com'
@@ -37619,6 +37622,7 @@ payload:
   - '+.mbabao.com'
   - '+.mbabycare.com'
   - '+.mbachina.com'
+  - '+.mbadashi.com'
   - '+.mbajyz.com'
   - '+.mbalib.com'
   - '+.mbalunwen.net'
@@ -40266,6 +40270,7 @@ payload:
   - '+.nicolaszhao.com'
   - '+.niconiconi.cc'
   - '+.nicotine.vip'
+  - '+.nicotv.me'
   - '+.nie.io'
   - '+.nielsenccdata.tv'
   - '+.nies.org'
@@ -57518,6 +57523,7 @@ payload:
   - '+.xiaoshituina.vip'
   - '+.xiaoshouhudong.com'
   - '+.xiaoshoukuaifa.com'
+  - '+.xiaoshourc.com'
   - '+.xiaoshouyi.com'
   - '+.xiaoshu168.com'
   - '+.xiaoshujiang.com'
@@ -58091,6 +58097,7 @@ payload:
   - '+.xinzheng.cc'
   - '+.xinzhenkj.com'
   - '+.xinzhi.space'
+  - '+.xinzzfsdfdslk333.com'
   - '+.xionganxinxi.com'
   - '+.xionganzhuce.com'
   - '+.xiongdayq.com'
@@ -59202,6 +59209,7 @@ payload:
   - '+.xyzggg.com'
   - '+.xyzkj.xyz'
   - '+.xyzmdzs.com'
+  - '+.xyzop.com'
   - '+.xyzs.com'
   - '+.xyzsq.com'
   - '+.xyzvo.com'
@@ -62749,7 +62757,6 @@ payload:
   - '+.zhangu365.com'
   - '+.zhangweijie.net'
   - '+.zhangwenli.com'
-  - '+.zhangxiaoyang.me'
   - '+.zhangxinhuichuan.com'
   - '+.zhangxinhulian.com'
   - '+.zhangxinxu.com'
@@ -62793,6 +62800,7 @@ payload:
   - '+.zhanyouyun.com'
   - '+.zhanzhang.net'
   - '+.zhao-meng.com'
+  - '+.zhao-zupu.com'
   - '+.zhaoapple.com'
   - '+.zhaobeidaxiao.com'
   - '+.zhaobeijing.com'
