--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1012,6 +1012,7 @@ payload:
   - '+.12226.com'
   - '+.12227.com'
   - '+.122cha.com'
+  - '+.122law.com'
   - '+.122park.com'
   - '+.123-789.com'
   - '+.123-biyezheng.org'
@@ -2155,7 +2156,6 @@ payload:
   - '+.2345a.com'
   - '+.2345ac.com'
   - '+.2345cdn.net'
-  - '+.2345daohang.com'
   - '+.2345download.com'
   - '+.2345ff.com'
   - '+.2345licai.com'
@@ -19161,6 +19161,7 @@ payload:
   - '+.dsxdn.com'
   - '+.dsxtv.pro'
   - '+.dsxys.com'
+  - '+.dsxys.pro'
   - '+.dsyjz0755.com'
   - '+.dszw.net'
   - '+.dtcash.com'
@@ -19676,7 +19677,6 @@ payload:
   - '+.e4008.com'
   - '+.e4221.com'
   - '+.e48.xyz'
-  - '+.e4asoft.com'
   - '+.e521.com'
   - '+.e5421.com'
   - '+.e546.net'
@@ -25978,7 +25978,6 @@ payload:
   - '+.hedaotang.net'
   - '+.hedgehogrock.com'
   - '+.heduibu.com'
-  - '+.heduwang.com'
   - '+.heeeeeh.com'
   - '+.heehee.club'
   - '+.heemoo.com'
@@ -30054,7 +30053,6 @@ payload:
   - '+.ishanshan.com'
   - '+.ishansong.com'
   - '+.ishaohuang.com'
-  - '+.ishare20.net'
   - '+.isharebest.com'
   - '+.isharepc.com'
   - '+.isheely.com'
@@ -31979,6 +31977,7 @@ payload:
   - '+.jlgyjj.com'
   - '+.jljbbs.com'
   - '+.jljgdj.org'
+  - '+.jljob88.com'
   - '+.jlkj.cc'
   - '+.jllihua.com'
   - '+.jlmhw.com'
@@ -32371,7 +32370,6 @@ payload:
   - '+.jshqjt.com'
   - '+.jshrconsult.com'
   - '+.jshsoft.com'
-  - '+.jshuabo.com'
   - '+.jshuachen.com'
   - '+.jshy.com'
   - '+.jshylm.com'
@@ -34374,7 +34372,6 @@ payload:
   - '+.kvov.org'
   - '+.kwaicdn.com'
   - '+.kwaigobuy.com'
-  - '+.kwaisczway7r4tz7m8.com'
   - '+.kwaishop.com'
   - '+.kwaishouapp.com'
   - '+.kwaixiaodian.com'
@@ -36525,7 +36522,6 @@ payload:
   - '+.lqbyj.com'
   - '+.lqgcb.com'
   - '+.lqgrdj.com'
-  - '+.lqhigo.com'
   - '+.lqhualang.com'
   - '+.lqjob88.com'
   - '+.lqpsj.com'
@@ -37651,6 +37647,7 @@ payload:
   - '+.mcake.com'
   - '+.mcarding.com'
   - '+.mcbbs.net'
+  - '+.mcbeam.pro'
   - '+.mcchcdn.com'
   - '+.mcchina.com'
   - '+.mcchou.com'
@@ -37910,6 +37907,7 @@ payload:
   - '+.meisubq.com'
   - '+.meisupic.com'
   - '+.meitangdehulu.com'
+  - '+.meitaotaoo.com'
   - '+.meitegou.com'
   - '+.meitianhui.com'
   - '+.meitibijia.com'
@@ -38175,7 +38173,6 @@ payload:
   - '+.mianxiangxue.com'
   - '+.mianyazulin.com'
   - '+.miao-lang.com'
-  - '+.miao.su'
   - '+.miaobe.com'
   - '+.miaoche.com'
   - '+.miaodiyun.com'
@@ -40742,6 +40739,7 @@ payload:
   - '+.nunu8.com'
   - '+.nuobeiliao.com'
   - '+.nuobg.com'
+  - '+.nuobz.com'
   - '+.nuodefund.com'
   - '+.nuoder.com'
   - '+.nuoha.vip'
@@ -40961,7 +40959,6 @@ payload:
   - '+.office26.com'
   - '+.officecdn.microsoft.com'
   - '+.officectrl.com'
-  - '+.officedoyen.com'
   - '+.officeedit.com'
   - '+.officese.com'
   - '+.officesoftcn.com'
@@ -41634,6 +41631,7 @@ payload:
   - '+.padding.me'
   - '+.paddlepaddle.org'
   - '+.paddlewaver.com'
+  - '+.pafwl.com'
   - '+.pageadmin.net'
   - '+.pagechoice.com'
   - '+.pagechoice.net'
@@ -46982,6 +46980,7 @@ payload:
   - '+.shenxianyu.cc'
   - '+.shenxingnet.com'
   - '+.shenyangoffice.com'
+  - '+.shenyd.com'
   - '+.shenyecg.com'
   - '+.shenyehd.com'
   - '+.shenyou.tv'
@@ -49521,7 +49520,6 @@ payload:
   - '+.svmuu.com'
   - '+.svn999.com'
   - '+.svnbucket.com'
-  - '+.svnfc.com'
   - '+.svnspot.com'
   - '+.svw-volkswagen.com'
   - '+.svwuc.com'
@@ -53705,7 +53703,6 @@ payload:
   - '+.vkemai.com'
   - '+.vksoft.com'
   - '+.vku6.com'
-  - '+.vkvr.net'
   - '+.vlabstatic.com'
   - '+.vlan9.com'
   - '+.vland-official.com'
@@ -55684,7 +55681,6 @@ payload:
   - '+.wjdiy.net'
   - '+.wjgslb.com'
   - '+.wjhh666.com'
-  - '+.wjhouses.com'
   - '+.wjhtxx.com'
   - '+.wjiaxing.com'
   - '+.wjika.com'
@@ -56517,7 +56513,6 @@ payload:
   - '+.www.vive.com'
   - '+.www.viveport.com'
   - '+.www.volvocars.com'
-  - '+.www045789.com'
   - '+.www1.djicdn.com'
   - '+.www2.djicdn.com'
   - '+.www2011india.com'
@@ -60446,6 +60441,7 @@ payload:
   - '+.yizhanzx.com'
   - '+.yizhchan.com'
   - '+.yizhema.com'
+  - '+.yizhengwx.com'
   - '+.yizhi-its.com'
   - '+.yizhibi.com'
   - '+.yizhibo.com'
@@ -63940,7 +63936,6 @@ payload:
   - '+.zjscs.com'
   - '+.zjshuo.com'
   - '+.zjsight.com'
-  - '+.zjsjdjhq.tokyo'
   - '+.zjsr.com'
   - '+.zjstv.com'
   - '+.zjsxlt.com'
