--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1956,7 +1956,6 @@ payload:
   - '+.20xs.cc'
   - '+.20xue.com'
   - '+.20z.com'
-  - '+.21-mars.com'
   - '+.21-rent.com'
   - '+.21-sun.com'
   - '+.2100xs.com'
@@ -3265,7 +3264,6 @@ payload:
   - '+.3vlm.net'
   - '+.3vsheji.com'
   - '+.3wads.com'
-  - '+.3wap.cc'
   - '+.3wcoffee.com'
   - '+.3wfocus.com'
   - '+.3wht.com'
@@ -4605,7 +4603,6 @@ payload:
   - '+.56.com'
   - '+.560.im'
   - '+.56015.com'
-  - '+.560la.com'
   - '+.5611.com'
   - '+.561218.com'
   - '+.56135.com'
@@ -6458,6 +6455,7 @@ payload:
   - '+.91maker.com'
   - '+.91mariadb.com'
   - '+.91maths.com'
+  - '+.91miaoshou.com'
   - '+.91money.com'
   - '+.91muzhi.com'
   - '+.91nzh.com'
@@ -7687,6 +7685,7 @@ payload:
   - '+.aicdn.com'
   - '+.aicdn4.com'
   - '+.aicdn5.com'
+  - '+.aicesu.com'
   - '+.aichaicp.com'
   - '+.aichaoxing.com'
   - '+.aichat.net'
@@ -8343,7 +8342,6 @@ payload:
   - '+.aluaa.com'
   - '+.alumni-cn.org'
   - '+.alumni-scut.org'
-  - '+.alwaysdesign.xin'
   - '+.alwaysnb.com'
   - '+.alwindoor.com'
   - '+.alxw.com'
@@ -9358,7 +9356,6 @@ payload:
   - '+.axure.us'
   - '+.axureshop.com'
   - '+.axureux.com'
-  - '+.axyahaxn.tokyo'
   - '+.axyxt.com'
   - '+.axzchou.com'
   - '+.axzlk.com'
@@ -9551,6 +9548,7 @@ payload:
   - '+.baidudaquan.com'
   - '+.baidufe.com'
   - '+.baidufree.com'
+  - '+.baiduhui.com'
   - '+.baidulook.com'
   - '+.baidunongmin.com'
   - '+.baiduor.com'
@@ -10501,7 +10499,6 @@ payload:
   - '+.bgwl.net'
   - '+.bgxlre.com'
   - '+.bgyfhyx.com'
-  - '+.bgyjr.com'
   - '+.bh.sb'
   - '+.bh1t.com'
   - '+.bh3.com'
@@ -11251,6 +11248,7 @@ payload:
   - '+.blibao.com'
   - '+.blibee.com'
   - '+.blibee.net'
+  - '+.blicube.com'
   - '+.blimage.com'
   - '+.bliner.me'
   - '+.bling.link'
@@ -15102,6 +15100,7 @@ payload:
   - '+.cmbimg.com'
   - '+.cmbuy10086.com'
   - '+.cmbwinglungbank.com'
+  - '+.cmbyc.com'
   - '+.cmcc-ecs.com'
   - '+.cmcc.in'
   - '+.cmcm.com'
@@ -19741,6 +19740,7 @@ payload:
   - '+.eastday.com'
   - '+.eastdesign.net'
   - '+.eastdigit.com'
+  - '+.eastdrama.com'
   - '+.eastdushi.com'
   - '+.easteat.com'
   - '+.eastent.com'
@@ -20420,7 +20420,6 @@ payload:
   - '+.emushroom.net'
   - '+.emwan.com'
   - '+.emyard.com'
-  - '+.en-sem.com'
   - '+.en.tm'
   - '+.en51.com'
   - '+.en8848.com'
@@ -21428,7 +21427,6 @@ payload:
   - '+.fcz360.com'
   - '+.fczx.com'
   - '+.fd-trust.com'
-  - '+.fd167.com'
   - '+.fd597.com'
   - '+.fd7c.com'
   - '+.fdcyun.com'
@@ -22502,6 +22500,7 @@ payload:
   - '+.fusion.design'
   - '+.fusroda.io'
   - '+.fute.com'
+  - '+.futrime.com'
   - '+.futu5.com'
   - '+.futufin.com'
   - '+.futuhk.com'
@@ -24145,6 +24144,7 @@ payload:
   - '+.gsktraining.com'
   - '+.gskwai.com'
   - '+.gskyty.com'
+  - '+.gslb.net'
   - '+.gsmpers.com'
   - '+.gspaceteam.com'
   - '+.gsqstudio.com'
@@ -26050,7 +26050,6 @@ payload:
   - '+.heiyuewan.com'
   - '+.heiyunxitong.com'
   - '+.heizhushoes.com'
-  - '+.hejinchuitou.net'
   - '+.hejiu2016.com'
   - '+.hejizhan.com'
   - '+.hejun.com'
@@ -26264,7 +26263,6 @@ payload:
   - '+.hfcyh.com'
   - '+.hffund.com'
   - '+.hfgjj.com'
-  - '+.hfhcl.com'
   - '+.hfhouse.com'
   - '+.hfhyw.com'
   - '+.hfi-health.com'
@@ -26704,6 +26702,7 @@ payload:
   - '+.hmecw.com'
   - '+.hmgj.com'
   - '+.hminvestment.com'
+  - '+.hmjblog.com'
   - '+.hmlan.com'
   - '+.hmltec.com'
   - '+.hmnst.com'
@@ -27357,6 +27356,7 @@ payload:
   - '+.hszzzx.net'
   - '+.ht-cao.com'
   - '+.ht-saae.com'
+  - '+.ht-tech.com'
   - '+.ht88.com'
   - '+.ht9.com'
   - '+.htanwang.com'
@@ -30256,7 +30256,6 @@ payload:
   - '+.itingwa.com'
   - '+.itit.io'
   - '+.itiyan.net'
-  - '+.itjk.me'
   - '+.itjoy.net'
   - '+.itjspx.com'
   - '+.itjuzi.com'
@@ -32920,7 +32919,6 @@ payload:
   - '+.jysyzk.com'
   - '+.jytdlz.com'
   - '+.jyteasy.com'
-  - '+.jyuvip.com'
   - '+.jywstw.com'
   - '+.jyxdyzx.com'
   - '+.jyxfzd.com'
@@ -33209,6 +33207,7 @@ payload:
   - '+.kanshu.com'
   - '+.kanshu.la'
   - '+.kanshu5.la'
+  - '+.kanshu5.net'
   - '+.kanshu8.net'
   - '+.kanshuapp.com'
   - '+.kanshuge.com'
@@ -35188,6 +35187,7 @@ payload:
   - '+.lers123.com'
   - '+.lers168.com'
   - '+.lers168.net'
+  - '+.lersang.com'
   - '+.lerye.com'
   - '+.leshanvc.com'
   - '+.leshi123.cc'
@@ -36312,7 +36312,6 @@ payload:
   - '+.longdear.com'
   - '+.longdezhu.com'
   - '+.longdian.com'
-  - '+.longdoer.com'
   - '+.longfajr.com'
   - '+.longfor.com'
   - '+.longfu360.com'
@@ -39189,6 +39188,7 @@ payload:
   - '+.msxiaobing.com'
   - '+.msymjz.com'
   - '+.msyos.com'
+  - '+.mszlyoozo.com'
   - '+.mszmapp.com'
   - '+.mszq.com'
   - '+.mszsx.com'
@@ -41951,7 +41951,6 @@ payload:
   - '+.pd120.com'
   - '+.pd17.com'
   - '+.pd521.com'
-  - '+.pdawiki.com'
   - '+.pdazw.com'
   - '+.pdbeta.com'
   - '+.pdcuo.com'
@@ -42802,7 +42801,6 @@ payload:
   - '+.ppxs.net'
   - '+.ppxwo.com'
   - '+.ppxzy.co'
-  - '+.ppym.xyz'
   - '+.ppys.net'
   - '+.ppzhan.com'
   - '+.ppzhilian.com'
@@ -44809,6 +44807,7 @@ payload:
   - '+.rdamicro.com'
   - '+.rdbom.com'
   - '+.rdbuy.com'
+  - '+.rdcy.org'
   - '+.rddoc.com'
   - '+.rdgz.org'
   - '+.rdidc.com'
@@ -47100,6 +47099,7 @@ payload:
   - '+.shijiudao.com'
   - '+.shijuba.com'
   - '+.shijue.me'
+  - '+.shijuechuanda.com'
   - '+.shijueju.com'
   - '+.shikang.net'
   - '+.shikee.com'
@@ -49280,6 +49280,7 @@ payload:
   - '+.sukiu.net'
   - '+.sukkaw.com'
   - '+.sukoutu.com'
+  - '+.sukunahust.com'
   - '+.sulabs.net'
   - '+.sulandscape.com'
   - '+.sule.cc'
@@ -50010,7 +50011,6 @@ payload:
   - '+.szxbyx.com'
   - '+.szxdhj.com'
   - '+.szxhdz.com'
-  - '+.szxianchu.com'
   - '+.szxiangjun.com'
   - '+.szxihu.com'
   - '+.szxinghe.net'
@@ -50987,7 +50987,6 @@ payload:
   - '+.tianmaying.com'
   - '+.tianmeng.org'
   - '+.tianmidian.com'
-  - '+.tianmin789.com'
   - '+.tianmupe.com'
   - '+.tianmupr.com'
   - '+.tiann90.com'
@@ -51685,6 +51684,7 @@ payload:
   - '+.toupiaoapp.com'
   - '+.touqikan.com'
   - '+.tour110.com'
+  - '+.tourboxtech.com'
   - '+.tourhr.com'
   - '+.tourjob.net'
   - '+.tourongjia.com'
@@ -53203,6 +53203,7 @@ payload:
   - '+.uusucai.com'
   - '+.uutop.com'
   - '+.uutuu.com'
+  - '+.uuu.ovh'
   - '+.uuu9.com'
   - '+.uuudo.com'
   - '+.uuuo.com'
@@ -53633,6 +53634,7 @@ payload:
   - '+.viptarena.com'
   - '+.viptijian.com'
   - '+.vipwhjtsgpc.com'
+  - '+.vipwzswl.com'
   - '+.vipxap.com'
   - '+.vipxdns.com'
   - '+.vipxdns.info'
@@ -57749,7 +57751,6 @@ payload:
   - '+.xijing01.com'
   - '+.xiju.cc'
   - '+.xijucn.com'
-  - '+.xikan.tv'
   - '+.xikii.com'
   - '+.xiladaili.com'
   - '+.xilaiping.com'
@@ -59138,6 +59139,7 @@ payload:
   - '+.xyj.link'
   - '+.xyj321.com'
   - '+.xyjt.org'
+  - '+.xykmovie.com'
   - '+.xylh888.com'
   - '+.xylink.com'
   - '+.xylmf.com'
@@ -61833,6 +61835,7 @@ payload:
   - '+.yusi.tv'
   - '+.yusi123.com'
   - '+.yuteng.site'
+  - '+.yutennet.com'
   - '+.yutian.cc'
   - '+.yutianedu.com'
   - '+.yutong.com'
@@ -64337,6 +64340,7 @@ payload:
   - '+.zshield.net'
   - '+.zshl.com'
   - '+.zshlife.com'
+  - '+.zshu.net'
   - '+.zshuoshao.online'
   - '+.zshzfzj.com'
   - '+.zsia.org'
