--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2584,6 +2584,7 @@ payload:
   - '+.323700.net'
   - '+.324.com'
   - '+.3259.com'
+  - '+.326pay.com'
   - '+.32800.com'
   - '+.328f.com'
   - '+.328vip.com'
@@ -3527,7 +3528,6 @@ payload:
   - '+.4sjob.com'
   - '+.4sscrm.com'
   - '+.4thetooth.com'
-  - '+.4turewei.com'
   - '+.4u4v.net'
   - '+.4w2b.cc'
   - '+.4w8.net'
@@ -5568,7 +5568,6 @@ payload:
   - '+.76al.com'
   - '+.76baobao.com'
   - '+.76dongdong.com'
-  - '+.76e.org'
   - '+.76ju.com'
   - '+.76wu.com'
   - '+.76xh.com'
@@ -8762,6 +8761,7 @@ payload:
   - '+.apjingsi.com'
   - '+.apk3.com'
   - '+.apkevery.com'
+  - '+.apkpackagesys.com'
   - '+.apkplug.com'
   - '+.apkrj.com'
   - '+.apkyx.com'
@@ -8860,6 +8860,7 @@ payload:
   - '+.appsina.com'
   - '+.appso.com'
   - '+.apptao.com'
+  - '+.apptuxing.com'
   - '+.appubang.com'
   - '+.appublisher.com'
   - '+.appurl.cc'
@@ -11704,7 +11705,6 @@ payload:
   - '+.btc38.com'
   - '+.btc5.net'
   - '+.btc789.com'
-  - '+.btcb.com'
   - '+.btcbbs.com'
   - '+.btcbl.com'
   - '+.btcha.com'
@@ -15796,7 +15796,6 @@ payload:
   - '+.cocostudio.org'
   - '+.cocounion.com'
   - '+.cocss.com'
-  - '+.coctotoo.com'
   - '+.codante.org'
   - '+.code-by.org'
   - '+.code.sh'
@@ -16284,7 +16283,6 @@ payload:
   - '+.cqrc.net'
   - '+.cqrcb.com'
   - '+.cqscmy.net'
-  - '+.cqshangceng.com'
   - '+.cqshenou.com'
   - '+.cqskl.com'
   - '+.cqslib.org'
@@ -17664,6 +17662,7 @@ payload:
   - '+.ddsy.com'
   - '+.ddtugame.com'
   - '+.ddtv135.com'
+  - '+.ddtv137.com'
   - '+.ddtxgame.com'
   - '+.ddtz5.com'
   - '+.ddun.com'
@@ -17729,7 +17728,6 @@ payload:
   - '+.dedeyun.com'
   - '+.dedezhuji.com'
   - '+.deehai.com'
-  - '+.deelplumbing.com'
   - '+.deemob.com'
   - '+.deemos.com'
   - '+.deepano.com'
@@ -25804,7 +25802,6 @@ payload:
   - '+.hch518.com'
   - '+.hchbblg.com'
   - '+.hchezhu.com'
-  - '+.hchfr.com'
   - '+.hchlidc.com'
   - '+.hchliot.com'
   - '+.hcicloud.com'
@@ -32393,7 +32390,6 @@ payload:
   - '+.jsrxjt.com'
   - '+.jssalt.com'
   - '+.jssfx.com'
-  - '+.jssgw.com'
   - '+.jsshow.net'
   - '+.jssnrcb.com'
   - '+.jsswordshop.com'
@@ -36088,13 +36084,10 @@ payload:
   - '+.llycloud.com'
   - '+.llzg.com'
   - '+.llzw888.com'
-  - '+.lm213.com'
   - '+.lm284.com'
   - '+.lm335.com'
   - '+.lm553.com'
   - '+.lm685.com'
-  - '+.lm832.com'
-  - '+.lm865.com'
   - '+.lm9999.com'
   - '+.lmacc.com'
   - '+.lmanmo.com'
@@ -37699,7 +37692,6 @@ payload:
   - '+.medme.net'
   - '+.medmeeting.org'
   - '+.medproad.com'
-  - '+.medsci-tech.com'
   - '+.medstarcorp.com'
   - '+.medtion.com'
   - '+.meechao.com'
@@ -43136,6 +43128,7 @@ payload:
   - '+.qcymall.com'
   - '+.qcyoung.com'
   - '+.qczb.app'
+  - '+.qczj.xyz'
   - '+.qd-metro.com'
   - '+.qd-weimob.com'
   - '+.qd256.com'
@@ -43617,7 +43610,6 @@ payload:
   - '+.qingbh.com'
   - '+.qingcache.com'
   - '+.qingcdn.com'
-  - '+.qingchifan.com'
   - '+.qingchu.com'
   - '+.qingchunbank.com'
   - '+.qingcigame.com'
@@ -44283,7 +44275,6 @@ payload:
   - '+.quanzhanketang.com'
   - '+.quanzhi.com'
   - '+.quanzhifu.net'
-  - '+.quanzhoudaqin.com'
   - '+.quanziapp.com'
   - '+.quarkbook.com'
   - '+.quarkers.com'
@@ -51568,7 +51559,6 @@ payload:
   - '+.toplinks.cc'
   - '+.toploong.com'
   - '+.topmba.mobi'
-  - '+.topnews9.com'
   - '+.topomel.com'
   - '+.toppdu.com'
   - '+.topperuse.com'
@@ -60085,7 +60075,6 @@ payload:
   - '+.yingk.com'
   - '+.yingkelawyer.com'
   - '+.yingle.com'
-  - '+.yinglou6.com'
   - '+.yinglunka.com'
   - '+.yingmei.me'
   - '+.yingmi.com'
@@ -60287,6 +60276,7 @@ payload:
   - '+.yitopapp.com'
   - '+.yitutech.com'
   - '+.yituyu.com'
+  - '+.yiuios.com'
   - '+.yiupin.com'
   - '+.yiuxiu.com'
   - '+.yivian.com'
@@ -60472,6 +60462,7 @@ payload:
   - '+.ylife9.com'
   - '+.ylimg.com'
   - '+.yliyun.com'
+  - '+.ylizu.com'
   - '+.yljc888.com'
   - '+.yljr.com'
   - '+.ylkc.net'
@@ -60494,7 +60485,6 @@ payload:
   - '+.ylwl.cc'
   - '+.ylws.net'
   - '+.ylwyw.com'
-  - '+.ylxbxgtg.com'
   - '+.ylxdtww.com'
   - '+.ylxk.net'
   - '+.ylxw.net'
@@ -62298,7 +62288,6 @@ payload:
   - '+.zcry007.com'
   - '+.zcs.cc'
   - '+.zcsbbs.com'
-  - '+.zcsblog.com'
   - '+.zcskj.com'
   - '+.zctl.net'
   - '+.zctx.com'
